Converting simple translation table items to use {{t}} <play#24170457>

--- a/en/p/play.8442.wikitext
+++ b/en/p/play.8442.wikitext
@@ -82,7 +82,7 @@ From {{etyl|enm|en}} {{term|playen|lang=enm}}, {{term|pleyen|lang=enm}}, {{term|
 
 =====Translations=====
 {{trans-top|act in a manner such that one has fun}}
-* Aleut: [[mikal]]
+* Aleut: {{t|ale|mikal}}
 * Arabic: {{t+|ar|لَعِبَ|tr=láʿiba|sc=Arab}}
 * Aramaic:
 *: [[Syriac]]: {{t|syc|ܫܥܐ|tr=šʿa|sc=Syrc}}
@@ -91,7 +91,7 @@ From {{etyl|enm|en}} {{term|playen|lang=enm}}, {{term|pleyen|lang=enm}}, {{term|
 * Basque: {{t|eu|joka}}
 * Belarusian: {{t|be|граць|tr=hrac'|sc=Cyrl}}
 * Burmese: {{t+|my|ဆော့|tr=hsaw.|sc=Mymr}}
-* Catalan: [[jugar]]
+* Catalan: {{t|ca|jugar}}
 * Chinese:
 *: Mandarin: {{t+|cmn|玩|tr=wán|sc=Hani}}, {{t|cmn|玩兒|sc=Hani}}, {{t+|cmn|玩儿|tr=wánr|sc=Hani}}
 * Czech: [[hrát]] si
@@ -135,18 +135,18 @@ From {{etyl|enm|en}} {{term|playen|lang=enm}}, {{term|pleyen|lang=enm}}, {{term|
 * Romani: {{t|rom|khelel}}
 * Romanian: {{t+|ro|juca}}
 * Romansch: {{t|rm|giugar}}
-* Russian: {{t+|ru|играть|tr=igrát’}} {{impf}}, {{t+|ru|поиграть|tr=poigrát’}} {{pf.}}
-* Scottish Gaelic: {{t|gd|cluich}},  {{qualifier|children}} {{t|gd|cleasaich}}
+* Russian: {{t+|ru|играть|impf|tr=igrát’}}, {{t+|ru|поиграть|pf|tr=poigrát’}}
+* Scottish Gaelic: {{t|gd|cluich}}, {{qualifier|children}} {{t|gd|cleasaich}}
 * Serbo-Croatian:
 *: Cyrillic: {{t|sh|и̏грати|sc=Cyrl}}
 *: Roman: {{t|sh|ȉgrati}}
 * Sicilian: {{t+|scn|giucari}}, {{t+|scn|jucari}}
-* Slovak: [[hrať sa]]
+* Slovak: {{t|sk|hrať sa}}
 * Slovene: {{t+|sl|igrati se}}
 * Spanish: {{t+|es|jugar}}
 * Swahili: {{t+|sw|tamthilia}}
 * Swedish: {{t+|sv|leka}}
-* Tagalog: [[maglaro]]
+* Tagalog: {{t|tl|maglaro}}
 * Telugu: [[ఆడు]] (aaDu)
 * Turkish: {{t+|tr|oynamak}}
 * Ukrainian: {{t+|uk|грати|tr=hráty|sc=Cyrl}}
@@ -157,7 +157,7 @@ From {{etyl|enm|en}} {{term|playen|lang=enm}}, {{term|pleyen|lang=enm}}, {{term|
 {{trans-top|produce music using a musical instrument (transitive sense), affecting a noun}}
 * Arabic: {{t|ar|عَزَفَ|tr=3ázafa}}
 * Armenian: {{t|hy|նվագել|tr=nvagel}}
-* Catalan: [[tocar]]
+* Catalan: {{t|ca|tocar}}
 * Chinese:
 *: Mandarin: {{t+|cmn|演奏|tr=yǎnzòu|sc=Hani}}, {{qualifier|string instruments including piano}} {{t+|cmn|彈|sc=Hani}}, {{t+|cmn|弹|tr=tán|sc=Hani}}&{{qualifier|formal}}{{t|cmn|彈奏|sc=Hani}}, {{t+|cmn|弹奏|tr=tánzòu|sc=Hani}}, {{qualifier|string instruments with a bow such as violin}} {{t+|cmn|拉|tr=lā|sc=Hani}}, {{qualifier|wind instruments}} {{t+|cmn|吹|tr=chuī|sc=Hani}}&{{qualifier|formal}}{{t+|cmn|吹奏|tr=chuīzòu|sc=Hani}}, {{qualifier|percussion instruments, especially gong}} {{t+|cmn|敲|tr=qiāo|sc=Hani}}, {{qualifier|percussion instruments, especially drum}} {{t+|cmn|打|tr=dǎ|sc=Hani}}
 * Dutch: {{t+|nl|spelen}}, {{t+|nl|bespelen}}
@@ -186,11 +186,11 @@ From {{etyl|enm|en}} {{term|playen|lang=enm}}, {{term|pleyen|lang=enm}}, {{term|
 * Portuguese: {{t+|pt|tocar}}
 * Quechua: {{t+|qu|takiy}}
 * Romanian: {{t+|ro|cânta}} (la)
-* Russian: {{t+|ru|играть|tr=igrát’}} {{impf}}, {{t+|ru|поиграть|tr=poigrát’}} {{pf.}} (+ [[на]] (na) + [[prepositional case]])
+* Russian: {{t+|ru|играть|impf|tr=igrát’}}, {{t+|ru|поиграть|tr=poigrát’}} {{pf.}} (+ [[на]] (na) + [[prepositional case]])
 * Slovene: {{t+|sl|igrati}}
 * Spanish: {{t+|es|tocar}}
 * Swedish: {{t+|sv|spela}}
-* Tagalog: [[tumugtog]]
+* Tagalog: {{t|tl|tumugtog}}
 * Turkish: {{t+|tr|çalmak}}
 * Urdu: {{t|ur|بجانا|tr=bajānā|sc=ur-Arab}}
 {{trans-bottom}}
@@ -198,7 +198,7 @@ From {{etyl|enm|en}} {{term|playen|lang=enm}}, {{term|pleyen|lang=enm}}, {{term|
 {{trans-top|produce music using a musical instrument (intransitive sense, not affecting a noun)}}
 * Arabic: {{t|ar|عَزَفَ|tr=3ázafa}}
 * Armenian: {{t|hy|նվագել|tr=nvagel}}
-* Catalan: [[tocar]]
+* Catalan: {{t|ca|tocar}}
 * Chinese:
 *: Mandarin: {{t+|cmn|演奏|tr=yǎnzòu|sc=Hani}}, {{qualifier|string instruments including piano}} {{t+|cmn|彈|sc=Hani}}, {{t+|cmn|弹|tr=tán|sc=Hani}}&{{qualifier|formal}}{{t|cmn|彈奏|sc=Hani}}, {{t+|cmn|弹奏|tr=tánzòu|sc=Hani}}, {{qualifier|string instruments with a bow such as violin}} {{t+|cmn|拉|tr=lā|sc=Hani}}, {{qualifier|wind instruments}} {{t+|cmn|吹|tr=chuī|sc=Hani}}&{{qualifier|formal}}{{t+|cmn|吹奏|tr=chuīzòu|sc=Hani}}, {{qualifier|percussion instruments, especially gong}} {{t+|cmn|敲|tr=qiāo|sc=Hani}}, {{qualifier|percussion instruments, especially drum}} {{t+|cmn|打|tr=dǎ|sc=Hani}}
 * Czech: {{t+|cs|hrát}}
@@ -222,12 +222,12 @@ From {{etyl|enm|en}} {{term|playen|lang=enm}}, {{term|pleyen|lang=enm}}, {{term|
 * Pashto: {{t+|ps|ږغول|tr=zhaγawəl|sc=ps-Arab}}
 * Polish: {{t+|pl|grać}}
 * Portuguese: {{t+|pt|tocar}}
-* Russian: {{t+|ru|играть|tr=igrát’}} {{impf}}, {{t+|ru|поиграть|tr=poigrát’}} {{pf.}}
+* Russian: {{t+|ru|играть|impf|tr=igrát’}}, {{t+|ru|поиграть|pf|tr=poigrát’}}
 * Slovene: {{t+|sl|igrati}}
 * Spanish: {{t+|es|tocar}}
 * Swahili: {{t+|sw|tamthilia}}
 * Swedish: {{t+|sv|spela}}
-* Tagalog: [[tumugtog]]
+* Tagalog: {{t|tl|tumugtog}}
 * Turkish: {{t+|tr|çalmak}}
 {{trans-bottom}}
 
@@ -242,7 +242,7 @@ From {{etyl|enm|en}} {{term|playen|lang=enm}}, {{term|pleyen|lang=enm}}, {{term|
 {{trans-top|act in a performance}}
 * Arabic: {{t+|ar|مَثَّلَ}}
 * Armenian: {{t|hy|խաղալ|tr=xaġal}}
-* Catalan: [[actuar]]
+* Catalan: {{t|ca|actuar}}
 * Chinese: [[表演]] (biǎoyǎn)
 * Czech: {{t+|cs|hrát}}
 * Dutch: {{t+|nl|optreden}}
@@ -258,12 +258,12 @@ From {{etyl|enm|en}} {{term|playen|lang=enm}}, {{term|pleyen|lang=enm}}, {{term|
 * Italian: {{t+|it|recitare}}
 * Jèrriais: {{t|roa-jer|jouer}}
 * Korean: [[연기를 하다]] (yeon-gireul hada)
-* Macedonian: {{t|mk|глуми|tr=glúmi}},  {{t|mk|игра|tr=ígra}}
+* Macedonian: {{t|mk|глуми|tr=glúmi}}, {{t|mk|игра|tr=ígra}}
 * Pashto: {{t|ps|لوبه كول|tr=loba kawəl|sc=ps-Arab}}
 * Polish: {{t+|pl|grać}}, {{t+|pl|występować}}
 * Portuguese: {{t+|pt|atuar}}, {{t+|pt|representar}}
 * Romanian: {{t+|ro|juca}}
-* Russian: {{t+|ru|играть|tr=igrát’}} {{impf}}
+* Russian: {{t+|ru|играть|impf|tr=igrát’}}
 * Slovene: {{t+|sl|igrati}}
 * Spanish: {{t+|es|actuar}}
 * Swahili: {{t+|sw|tamthilia}}
@@ -279,7 +279,7 @@ From {{etyl|enm|en}} {{term|playen|lang=enm}}, {{term|pleyen|lang=enm}}, {{term|
 * Chinese:
 *: Mandarin: {{t|cmn|參與|sc=Hani}}, {{t+|cmn|参与|tr=cān yù|sc=Hani}}, {{t|cmn|參加|sc=Hani}}, {{t+|cmn|参加|tr=cān jiā|sc=Hani}}, {{qualifier|games}} {{t+|cmn|玩|tr=wán|sc=Hani}}, {{qualifier|sports with pedal hitting, such as football}} {{t+|cmn|踢|tr=tī|sc=Hani}}, {{qualifier|sports with manual hitting, such as basketball and badminton}} {{t+|cmn|打|tr=dǎ|sc=Hani}}, {{qualifier|sports with throwing, such as discus throw}} {{t+|cmn|擲|sc=Hani}}, {{t+|cmn|掷|tr=zhì|sc=Hani}}&{{qualifier|colloquial&informal}} {{t+|cmn|扔|tr=rēng|sc=Hani}}, {{qualifier|sports with pushing, such as shot put}} {{t+|cmn|推|tr=tuī|sc=Hani}}, {{qualifier|sports with running, such as marathon}} {{t+|cmn|跑|tr=pǎo|sc=Hani}}
 * Czech: {{t+|cs|hrát}}
-* Dutch: [[spelen]], [[meespelen]]
+* Dutch: {{t|nl|spelen}}, {{t|nl|meespelen}}
 * Finnish: {{t+|fi|pelata}}
 * French: [[jouer]] [[à]]
 * Galician: {{t|gl|xogar}}
@@ -300,12 +300,12 @@ From {{etyl|enm|en}} {{term|playen|lang=enm}}, {{term|pleyen|lang=enm}}, {{term|
 * Portuguese: {{t+|pt|jogar}}
 * Quechua: {{t|qu|pukllay}}
 * Romanian: {{t+|ro|juca}}
-* Russian: {{t+|ru|играть|tr=igrát’}} {{impf}}
+* Russian: {{t+|ru|играть|impf|tr=igrát’}}
 * Slovene: {{t+|sl|igrati}}
 * Spanish: [[jugar]] a
 * Swahili: {{t+|sw|tamthilia}}
 * Swedish: {{t+|sv|spela}}
-* Tagalog: [[maglaro]]
+* Tagalog: {{t|tl|maglaro}}
 * Turkish: {{t+|tr|oynamak}}
 {{trans-bottom}}
 
@@ -317,7 +317,7 @@ From {{etyl|enm|en}} {{term|playen|lang=enm}}, {{term|pleyen|lang=enm}}, {{term|
 * Dutch: {{t+|nl|spelen}}, {{t+|nl|afspelen}}
 * Finnish: {{t+|fi|soittaa}}
 * French: {{qualifier|the media is being played}} {{t+|fr|mettre}}, {{qualifier|to play an already inserted media}} {{t+|fr|lancer}}, {{qualifier|the media is the subject}} {{t+|fr|tourner}} / {{t+|fr|jouer}}
-* German: {{t|de|abspielen}},  {{t+|de|spielen}}
+* German: {{t|de|abspielen}}, {{t+|de|spielen}}
 * Hebrew: {{t|he|השמיע|tr=hishmía}}
 * Hungarian: {{t|hu|lejátszik}}
 * Icelandic: {{t|is|spila}}
@@ -328,9 +328,9 @@ From {{etyl|enm|en}} {{term|playen|lang=enm}}, {{term|pleyen|lang=enm}}, {{term|
 *: Sorani: {{t+|ku|لێدان|tr=lédan|sc=ku-Arab}}
 * Macedonian: {{t|mk|пушта|tr=púšta}}
 * Pashto: {{t+|ps|ږغول|tr=zhaγawəl|sc=ps-Arab}}
-* Polish: [[grać]], [[odtwarzać]]
+* Polish: {{t|pl|grać}}, {{t|pl|odtwarzać}}
 * Portuguese: {{t+|pt|gravar}}
-* Slovene: [[predvajati]]
+* Slovene: {{t|sl|predvajati}}
 * Spanish: {{t|es|reproducir}}
 * Swahili: {{t+|sw|tamthilia}}
 * Swedish: {{t+|sv|spela}}, {{t+|sv|spela upp}}
@@ -380,17 +380,17 @@ From {{etyl|enm|en}} {{term|pleye|lang=enm}}, from {{etyl|ang|en}} {{term/t|ang|
 
 =====Translations=====
 {{trans-top|playful activity}}
-* Albanian: [[lojë]] {{g|f}}
+* Albanian: {{t|sq|lojë|f}}
 * Arabic: {{t+|ar|لَعِب|f|tr=lá3ib|sc=Arab}}
 * Armenian: [[խաղ]] (xaġ)
-* Catalan: [[joc]] {{g|m}}
+* Catalan: {{t|ca|joc|m}}
 * Chinese:
 *: Mandarin: {{t+|cmn|玩|sc=Hani}}, {{t|cmn|玩兒|sc=Hani}}, {{t+|cmn|玩儿|tr=wánr|sc=Hani}}
 * Czech: {{t+|cs|hra|f}}
 * Danish: {{t+|da|leg}}, {{t|da|spil}}
 * Dutch: {{t+|nl|spel}}
 * Esperanto: {{t|eo|ludo}}
-* Ewe: [[fefe]]
+* Ewe: {{t|ee|fefe}}
 * Finnish: {{t+|fi|leikki}}, {{t+|fi|peli}}
 * French: {{t+|fr|jeu|m}}
 * Galician: {{t|gl|xogo|m}}
@@ -450,17 +450,17 @@ From {{etyl|enm|en}} {{term|pleye|lang=enm}}, from {{etyl|ang|en}} {{term/t|ang|
 {{trans-bottom}}
 
 {{trans-top|theatrical performance}}
-* American Sign Language: [[A@Left1Chesthigh-A@Right1Chesthigh Upanddown]]
+* American Sign Language: {{t|ase|A@Left1Chesthigh-A@Right1Chesthigh Upanddown}}
 * Arabic: {{t|ar|مسرح|m|tr=másraH}}, {{t|ar|مسرحية|f|tr=masraHíyya}}
 * Armenian: [[ներկայացում]] (nerkayac'um)
-* Catalan: [[obra]] {{g|f}}
+* Catalan: {{t|ca|obra|f}}
 * Chinese:
 *: Mandarin: {{t|cmn|戲劇|sc=Hani}}, {{t+|cmn|戏剧|tr=xìjù|sc=Hani}}, {{t|cmn|話劇|sc=Hani}}, {{t+|cmn|话剧|tr=huàjù|sc=Hani}}
 * Czech: {{t+|cs|hra|f}}
 * Danish: {{t|da|stykke}}, {{t|da|spil}}
 * Dutch: {{t+|nl|optreden|n}}, {{t+|nl|schouwspel|n}}, {{t+|nl|toneelstuk|n}}, {{t+|nl|stuk|n}}
 * Esperanto: {{t|eo|teatraĵo}}
-* Ewe: [[fefe]]
+* Ewe: {{t|ee|fefe}}
 * Finnish: {{t+|fi|näytelmä}}
 * French: {{t+|fr|pièce de théâtre|f}}
 * German: {{t+|de|Schauspiel|n}}
@@ -491,12 +491,12 @@ From {{etyl|enm|en}} {{term|pleye|lang=enm}}, from {{etyl|ang|en}} {{term/t|ang|
 * Swedish: {{t+|sv|pjäs|c}}
 * Tagalog: {{t+|tl|dula}}
 * Telugu: [[నాటకం]] (naaTakaM)
-* Turkish: {{t+|tr|oyun}},  {{t|tr|tiyatro oyunu}}
+* Turkish: {{t+|tr|oyun}}, {{t|tr|tiyatro oyunu}}
 * Welsh: {{t+|cy|drama|f}}
 {{trans-bottom}}
 
 {{trans-top|individual's performance in a sport}}
-* Dutch: [[spelbeweging]] {{g|f}}
+* Dutch: {{t|nl|spelbeweging|f}}
 * Finnish: {{t+|fi|peli}}
 * Hebrew: {{t+|he|משחק|m|tr=misḥāq}}
 * Hungarian: {{t+|hu|játék}}
@@ -530,7 +530,7 @@ From {{etyl|enm|en}} {{term|pleye|lang=enm}}, from {{etyl|ang|en}} {{term/t|ang|
 * Finnish: {{t|fi|välys}}, {{t|fi|klappi}}, {{t+|fi|löysä}}
 * French: {{t+|fr|jeu|m}}
 * German: {{t+|de|Spiel|n}}
-* Hungarian: [[holtjáték]]
+* Hungarian: {{t|hu|holtjáték}}
 {{trans-mid}}
 * Irish: {{t|ga|ligean|m}}
 * Russian: {{t+|ru|люфт|m|tr=l'uft}}, {{t+|ru|зазор|m|tr=zazór}}, {{t+|ru|свободный ход|m|tr=svobódnyj xod}}
