--- a/en/p/pull.8438.wikitext
+++ b/en/p/pull.8438.wikitext
@@ -117,7 +117,7 @@ From {{etyl|enm|en}} {{term|pullen|lang=enm}}, from {{etyl|ang|en}} {{term|pulli
 
 ====Translations====
 {{trans-top|apply force to (something) so it comes towards one}}
-* Arabic: {{t|ar|جر|tr=járra}},  {{t|ar|سحب|tr=sáḥaba}}
+* Arabic: {{t|ar|جر|tr=járra}}, {{t|ar|سحب|tr=sáḥaba}}
 *: Egyptian Arabic: {{t|arz|جر|tr=garr|sc=Arab}}, {{t|arz|جرجر|tr=gargar|sc=Arab}}, {{t|arz|سحب|tr=saḥab|sc=Arab}}
 *: Moroccan Arabic: {{t|ary|جر|tr=jerr}}, {{t|ary|جبد|tr=jbed}}
 * Armenian: {{t|hy|քաշել|tr=k'ašel}}, {{t|hy|ձգել|tr=jgel}}
@@ -128,18 +128,18 @@ From {{etyl|enm|en}} {{term|pullen|lang=enm}}, from {{etyl|ang|en}} {{term|pulli
 * Catalan: {{t+|ca|tirar}}
 * Chinese:
 *: Mandarin: {{t+|cmn|拖拉|tr=tuōlā|sc=Hani}}, {{t+|cmn|拉|tr=lā|sc=Hani}}
-* Czech: {{t+|cs|táhnout}} {{impf}}, {{t|cs|tahat}} {{impf}}
+* Czech: {{t+|cs|táhnout|impf}}, {{t|cs|tahat|impf}}
 * Danish: {{t+|da|trække}}
 * Dutch: {{t+|nl|trekken}}
 * Esperanto: {{t|eo|tiri}}
 * Finnish: {{t+|fi|vetää}}
 * French: {{t+|fr|tirer}}
-* Galician: {{t|gl|puxar}},  {{t+|gl|tirar}}
+* Galician: {{t|gl|puxar}}, {{t+|gl|tirar}}
 * German: {{t+|de|ziehen}}
 * Hindi: {{t|hi|खींचना|tr=khī̃cnā|sc=Deva}}
 * Hungarian: {{t+|hu|húz}}
-* Indonesian: {{t+|id|menarik}},  {{t+|id|tarik}}
-* Italian: [[tirare]]
+* Indonesian: {{t+|id|menarik}}, {{t+|id|tarik}}
+* Italian: {{t|it|tirare}}
 * Japanese: {{t+|ja|引く|tr=ひく, hiku}}, {{t|ja|引っ張る|tr=ひっぱる, hipparu|sc=Jpan}}
 * Jèrriais: {{t|roa-jer|haler}}
 * Kazakh: {{t+|kk|тарту|tr=tartw|sc=Cyrl}}
@@ -148,27 +148,27 @@ From {{etyl|enm|en}} {{term|pullen|lang=enm}}, from {{etyl|ang|en}} {{term|pulli
 * Kurdish:
 *: Sorani: {{t|ku|ڕاکێشه‌}}
 {{trans-mid}}
-* Latin: {{t|la|vello}},  {{t+|la|traho}}
+* Latin: {{t|la|vello}}, {{t+|la|traho}}
 * Lojban: {{t|jbo|lacpu}}
 * Macedonian: {{t|mk|влече|tr=vléče|sc=Cyrl}}
 * Malay: {{t|ms|tarik}}
 * Norwegian: {{t+|no|trekke}}, {{t+|no|dra}}
 * Novial: {{t|nov|tira}}
 * Persian: {{t+|fa|کشیدن|tr=kešidan|sc=fa-Arab}}
-* Polish: {{t+|pl|ciągnąć}} {{impf}}, {{t|pl|pociągnąć}} {{pf.}}
-* Portuguese: {{t+|pt|puxar}},  {{t+|pt|tirar}}
+* Polish: {{t+|pl|ciągnąć|impf}}, {{t|pl|pociągnąć|pf}}
+* Portuguese: {{t+|pt|puxar}}, {{t+|pt|tirar}}
 * Quechua: {{t|qu|aysay}}
 * Romanian: {{t|ro|trage}}
 * Romansch: {{t|rm|trair}}
-* Russian: {{t+|ru|тянуть|tr=tjanútʹ}} {{impf}}, {{t+|ru|потянуть|tr=potjanútʹ}} {{pf.}}, {{t+|ru|тащить|tr=taščítʹ}} {{impf}}, {{t+|ru|потащить|tr=potaščítʹ}} {{pf.}}, {{t+|ru|тягать|tr=tjagátʹ|sc=Cyrl}} {{impf}} {{qualifier|abstract}}
-* Scottish Gaelic: {{t|gd|slaod}},  {{t|gd|tarraing}}
+* Russian: {{t+|ru|тянуть|impf|tr=tjanútʹ}}, {{t+|ru|потянуть|pf|tr=potjanútʹ}}, {{t+|ru|тащить|impf|tr=taščítʹ}}, {{t+|ru|потащить|pf|tr=potaščítʹ}}, {{t+|ru|тягать|tr=tjagátʹ|sc=Cyrl}} {{impf}} {{qualifier|abstract}}
+* Scottish Gaelic: {{t|gd|slaod}}, {{t|gd|tarraing}}
 * Serbo-Croatian:
 *: Cyrillic: {{t|sh|потезати}} {{impf}}, {{t|sh|потегнути}} {{pf.}}
 *: Roman: {{t|sh|potezati}} {{impf}}, {{t|sh|potegnuti}} {{pf.}}
-* Slovak: {{t|sk|tiahnuť}} {{impf}}, {{t|sk|ťahať}} {{impf}}, {{t|sk|potiahnuť}} {{pf.}}
+* Slovak: {{t|sk|tiahnuť|impf}}, {{t|sk|ťahať|impf}}, {{t|sk|potiahnuť|pf}}
 * Slovene: {{t|sl|tegniti}}
 * Spanish: {{t+|es|tirar}}, {{t+|es|jalar}}
-* Swahili: [[kuvuta]]
+* Swahili: {{t|sw|kuvuta}}
 * Swedish: {{t+|sv|dra}}, {{t+|sv|draga}}
 * Telugu: [[లాగు]] (laagu)
 * Thai: {{t+|th|ดึง|tr=deung|sc=Thai}}
@@ -177,7 +177,7 @@ From {{etyl|enm|en}} {{term|pullen|lang=enm}}, from {{etyl|ang|en}} {{term|pulli
 * Urdu: {{t|ur|کهينچنا|tr=khī̃cnā|sc=ur-Arab}}
 * Vietnamese: {{t+|vi|kéo}}, {{t+|vi|giật}}
 * Walloon: {{t+|wa|saetchî}}, {{t+|wa|haetchî}}
-* West Frisian: {{t+|fy|trekke}},  {{t|fy|lûke}}
+* West Frisian: {{t+|fy|trekke}}, {{t|fy|lûke}}
 {{trans-bottom}}
 
 {{trans-top|slang: persuade (a person) to have sex with one}}
@@ -213,7 +213,7 @@ From {{etyl|enm|en}} {{term|pullen|lang=enm}}, from {{etyl|ang|en}} {{term|pulli
 {{trans-mid}}
 * German: {{t+|de|ziehen}}
 * Italian: {{t+|it|tirare}}
-* Scottish Gaelic: {{t|gd|slaod}},  {{t|gd|tarraing}}
+* Scottish Gaelic: {{t|gd|slaod}}, {{t|gd|tarraing}}
 * Spanish: {{t+|es|halar}}, {{t+|es|jalar}}
 * Swedish: {{t+|sv|dra}}
 {{trans-bottom}}
