--- a/en/p/play.8442.wikitext
+++ b/en/p/play.8442.wikitext
@@ -44,7 +44,7 @@ From {{etyl|enm|en}} {{term|playen|lang=enm}}, {{term|pleyen|lang=enm}}, {{term|
 # {{context|transitive|ergative|lang=en}} To use a device to watch or listen to the indicated recording.
 #: {{usex|lang=en|You can '''play''' the DVD now.}}
 # {{context|copulative|lang=en}} Contrary to fact, to give an appearance of being.
-#* Sir Walter Scott
+#* {{rfdate}} Sir {{w|Walter Scott}}
 #*: Thou canst '''play''' the rational if thou wilt.
 #* '''1985''', Sharon S Brehm, ''Intimate Relationships''
 #*: '''Playing''' hard to get is not the same as slamming the door in someone's face.
@@ -52,33 +52,33 @@ From {{etyl|enm|en}} {{term|playen|lang=enm}}, {{term|pleyen|lang=enm}}, {{term|
 #*: Now, surveying his final link, he had the nice advantage of being able to '''play''' coy with established port cities that desperately wanted his proven railroad.
 #* '''2003''', John U. Ogbu, ''Black American Students in an Affluent Suburb: A Study of Academic Disengagement'', page 194
 #*: Instead, they '''played''' dumb, remained silent, and did their classwork.
-# To act with levity or thoughtlessness; to trifle; to be careless.
-#* Sir W. Temple
+# {{cx|intransitive}} To act with levity or thoughtlessness; to trifle; to be careless.
+#* {{rfdate}} Sir {{w|W. Temple}}
 #*: Men are apt to '''play''' with their healths.
-# To act; to behave; to practice deception.
-#* Shakespeare
+# {{cx|intransitive}} To act; to behave; to practice deception.
+#* {{rfdate}} {{w|Shakespeare}}
 #*: His mother '''played''' false with a smith.
-# To move in any manner; especially, to move regularly with alternate or reciprocating motion; to operate.
+# {{cx|intransitive}} To move in any manner; especially, to move regularly with alternate or reciprocating motion; to operate.
 #: ''The fountain '''plays'''.''
-#* Cheyne
+#* {{rfdate}} {{w|Cheyne}}
 #*: The heart beats, the blood circulates, the lungs '''play'''.
-# To move gaily; to disport.
-#* Shakespeare
+# {{cx|intransitive}} To move gaily; to disport.
+#* {{rfdate}} {{w|Shakespeare}}
 #*: even as the waving sedges '''play''' with wind
-#* Addison
+#* {{rfdate}} {{w|Addison}}
 #*: The setting sun / '''Plays''' on their shining arms and burnished helmets.
-#* Alexander Pope
+#* {{rfdate}} {{w|Alexander Pope}}
 #*: All fame is foreign but of true desert, / '''Plays''' round the head, but comes not to the heart.
-# To put in action or motion.
+# {{cx|transitive}} To put in action or motion.
 #: ''to '''play''' cannon upon a fortification''
 #: ''to '''play''' a trump in a card game''
-# To bring into sportive or wanton action; to exhibit in action; to execute.
+# {{cx|transitive}} To bring into sportive or wanton action; to exhibit in action; to execute.
 #: ''to '''play''' tricks''
-#* Milton
+#* {{rfdate}} {{w|John Milton}}
 #*: Nature here / Wantoned as in her prime, and '''played''' at will / Her virgin fancies.
-# To act or perform (a play).
+# {{cx|transitive}} To act or perform (a play).
 #: ''to '''play''' a comedy''
-# To keep in play, as a [[hook]]ed [[fish]], in order to [[land]] it.
+# {{cx|transitive}} To keep in play, as a [[hook]]ed [[fish]], in order to [[land]] it.
 
 =====Translations=====
 {{trans-top|act in a manner such that one has fun}}
