--- a/en/p/push.8439.wikitext
+++ b/en/p/push.8439.wikitext
@@ -80,7 +80,7 @@
 * Arabic: {{t+|ar|دفع|tr=dáfaʿa|sc=Arab}}
 * Armenian: {{t|hy|հրել|tr=hrel|sc=Armn}}
 * Aromanian: {{t|rup|pingu}}
-* Belarusian: {{t|be|штурхаць|tr=štúrxacʹ|sc=Cyrl}} {{impf}}, {{t|be|штурхнуць|sc=Cyrl}} {{pf.}}
+* Belarusian: {{t|be|штурхаць|impf|tr=štúrxacʹ|sc=Cyrl}}, {{t|be|штурхнуць|pf|sc=Cyrl}}
 * Bengali: {{t|bn|ধাক্কা দেওয়া|tr=dhakka deoa|sc=Beng}}, {{t|bn|ধাক্কানো|tr=dhakkano|sc=Beng}}
 * Bulgarian: {{t+|bg|бутам|tr=butam|sc=Cyrl}}, {{t+|bg|блъскам|tr=blǎskam|sc=Cyrl}}
 * Burmese: {{t+|my|တွန်း|tr=tun:|sc=Mymr}}
@@ -115,25 +115,25 @@
 * Occitan: {{t+|oc|butar}}
 * Old English: {{t|ang|scūfan}}
 * Persian: {{t|fa|هل دادن|tr=hol dâdan|sc=fa-Arab}}
-* Polish: {{t+|pl|pchnąć}} {{impf}}, {{t|pl|popchnąć}} {{pf.}}
+* Polish: {{t+|pl|pchnąć|impf}}, {{t|pl|popchnąć|pf}}
 * Portuguese: {{t+|pt|empurrar}}
 * Quechua: {{t|qu|tanqay}}
 * Romanian: {{t+|ro|împinge}}, {{t+|ro|apăsa}}
-* Russian: {{t+|ru|толкать|tr=tolkátʹ|sc=Cyrl}} {{impf}}, {{t+|ru|толкнуть|tr=tolknútʹ|sc=Cyrl}} {{pf.}}, {{t+|ru|пихать|tr=pixátʹ|sc=Cyrl}} {{impf}}, {{t+|ru|пихнуть|tr=pixnútʹ|sc=Cyrl}} {{pf.}}
+* Russian: {{t+|ru|толкать|impf|tr=tolkátʹ|sc=Cyrl}}, {{t+|ru|толкнуть|pf|tr=tolknútʹ|sc=Cyrl}}, {{t+|ru|пихать|impf|tr=pixátʹ|sc=Cyrl}}, {{t+|ru|пихнуть|pf|tr=pixnútʹ|sc=Cyrl}}
 * Samoan: {{t|sm|smatgar}}
 * Sardinian: {{t|sc|ipinghere}}, {{t|sc|ispinghere}}, {{t|sc|spingiri}}
 * Scottish Gaelic: {{t|gd|stob}}, {{t|gd|put}}
 * Serbo-Croatian:
 *: Cyrillic: {{t|sh|потиснути}} {{pf.}}, {{t|sh|гурати}}
 *: Roman: {{t|sh|potisnuti}} {{pf.}}, {{t|sh|gurati}}
-* Slovak: {{t|sk|tlačiť}} {{impf}}
-* Slovene: {{t+|sl|tiskati}} {{impf}}, {{t|sl|potiskati}} {{pf.}}
+* Slovak: {{t|sk|tlačiť|impf}}
+* Slovene: {{t+|sl|tiskati|impf}}, {{t|sl|potiskati|pf}}
 * Spanish: {{t+|es|empujar}}
 * Swahili: {{t|sw|kusukuma}}
 * Swedish: {{t|sv|skjuta på}}
 * Telugu: {{t+|te|నెట్టు|tr=neTTu|sc=Telu}}, {{t+|te|తోయు|tr=tOyu|sc=Telu}}
 * Thai: {{t|th|ดัน|tr=dan|sc=Thai}}, {{t+|th|กด|tr=gòt|sc=Thai}}, {{t|th|ผลัก|tr=phlàk|sc=Thai}}
-* Ukrainian: {{t|uk|штовхати|tr=štovxáty|sc=Cyrl}} {{impf}}
+* Ukrainian: {{t|uk|штовхати|impf|tr=štovxáty|sc=Cyrl}}
 * Urdu: {{t|ur|دھکیلنا|tr=dhakelnā|sc=ur-Arab}}
 * Vietnamese: {{t+|vi|xô}}, {{t+|vi|đẩy}}
 * West Frisian: {{t|fy|triuwe}}
