Converting simple translation table items to use {{t}} <thunder#24175152>

--- a/en/t/thunder.7222.wikitext
+++ b/en/t/thunder.7222.wikitext
@@ -244,7 +244,7 @@ From {{etyl|ang|en}} {{term|þunor|lang=ang}}, from {{etyl|gem-pro|en}} {{term/t
 * Portuguese: {{t|pt|trovoar}}, {{t+|pt|trovejar}}
 * Romanian: {{t+|ro|tuna}}
 * Romansch: {{t|rm|tunar}}, {{t|rm|tuner}}
-* Russian: {{t+|ru|греметь|tr=gremét’}} {{impf}}, {{t+|ru|грохотать|tr=groxotát’}} {{impf}}, {{t+|ru|громыхать|tr=gromyxát’|sc=Cyrl}} {{impf}}
+* Russian: {{t+|ru|греметь|impf|tr=gremét’}}, {{t+|ru|грохотать|impf|tr=groxotát’}}, {{t+|ru|громыхать|impf|tr=gromyxát’|sc=Cyrl}}
 * Sardinian: {{t|sc|tronai}}, {{t|sc|tronare}}
 * Slovene: {{t|sl|grmeti}}
 * Spanish: {{t|es|tronar}}
