--- a/en/f/float.8440.wikitext
+++ b/en/f/float.8440.wikitext
@@ -197,7 +197,7 @@ From {{etyl|enm|en}} {{term|floten|lang=enm}}, from {{etyl|ang|en}} {{term|floti
 ====Translations====
 {{trans-top|be supported by a liquid}}
 * Arabic: {{t|ar|يطفو}}
-* Belarusian: {{qualifier|abstract}} {{t|be|плаваць|tr=plávac'|sc=Cyrl}} {{impf}}, {{t|be|паплаваць|tr=paplávac'|sc=Cyrl}} {{pf.}}; {{qualifier|concrete}} {{t|be|плыць|tr=plyc'|sc=Cyrl}} {{impf}}, {{t|be|паплыць|tr=paplýc’|sc=Cyrl}} {{pf.}}
+* Belarusian: {{qualifier|abstract}} {{t|be|плаваць|tr=plávac'|sc=Cyrl}} {{impf}}, {{t|be|паплаваць|tr=paplávac'|sc=Cyrl}} {{pf.}}, {{qualifier|concrete}} {{t|be|плыць|tr=plyc'|sc=Cyrl}} {{impf}}, {{t|be|паплыць|tr=paplýc’|sc=Cyrl}} {{pf.}}
 * Bulgarian: {{t+|bg|плавам|sc=Cyrl}}
 * Burmese: {{t+|my|မျော|tr=myaw:|sc=Mymr}}
 * Catalan: {{t+|ca|flotar}}
@@ -215,13 +215,13 @@ From {{etyl|enm|en}} {{term|floten|lang=enm}}, from {{etyl|ang|en}} {{term|floti
 * Jèrriais: {{t|roa-jer|fliotter}}
 * Khmer: {{t|km|អន្ដែត|tr=on-dait}}
 * Latin: {{t|la|fluctuo}}
-* Lithuanian: {{t|lt|plūduriuoti}} {{impf}}; {{t+|lt|plaukti}} {{impf}}
+* Lithuanian: {{t|lt|plūduriuoti}} {{impf}}, {{t+|lt|plaukti}} {{impf}}
 * Maori: {{t|mi|mānu}}
 * Portuguese: {{t+|pt|boiar}}, {{t+|pt|flutuar}}
 * Quechua: {{t|qu|tuytuy}}
 * Romanian: {{t+|ro|pluti}}
 * Romansch: {{t|rm|flottar}}
-* Russian: {{t+|ru|плавать|tr=plávat’}} {{impf}}; {{t+|ru|всплывать|tr=vsplyvát’}} {{pf.}}, {{t+|ru|всплыть|tr=vsplyt’}} {{impf}} {{qualifier|to reach the surface}}
+* Russian: {{t+|ru|плавать|impf}}, {{t+|ru|всплывать|pf}}, {{t+|ru|всплыть|impf}} {{qualifier|to reach the surface}}
 * Spanish: {{t+|es|flotar}}
 * Swedish: {{t+|sv|flyta}}
 * Telugu: {{t+|te|తేలు|tr=tElu}}
@@ -239,8 +239,8 @@ From {{etyl|enm|en}} {{term|floten|lang=enm}}, from {{etyl|ang|en}} {{term|floti
 * Hungarian: {{t+|hu|lebeg}}, {{t+|hu|úszik}}
 * Japanese: {{t|ja|浮かぶ|tr=ukabu}}, {{t|ja|浮く|tr=uku}}
 * Jèrriais: {{t|roa-jer|fliotter}}
-* Lithuanian: {{t|lt|plūduriuoti}} {{impf}}; {{t+|lt|plaukti}} {{impf}}
-* Russian: {{t|ru|держаться на воде|tr=d'eržát’s’a na vod’é}}
+* Lithuanian: {{t|lt|plūduriuoti}} {{impf}}, {{t+|lt|plaukti}} {{impf}}
+* Russian: {{t|ru|[[держа́ться]] [[на]] [[вода|воде́]]}}
 * Spanish: {{t+|es|flotar}}
 {{trans-bottom}}
 
@@ -256,7 +256,7 @@ From {{etyl|enm|en}} {{term|floten|lang=enm}}, from {{etyl|ang|en}} {{term|floti
 * Malay:
 *: Rumi: {{t|ms|ambang}}
 *: Jawi: {{t|ms|امبڠ|sc=Arab}}
-* Russian: {{t+|ru|парить|impf|tr=parít’}}, {{t+|ru|плыть|impf|tr=plyt’}}
+* Russian: {{t+|ru|пари́ть|impf}}, {{t+|ru|плыть|impf}}
 * Spanish: {{t+|es|flotar}}
 {{trans-bottom}}
 
@@ -268,7 +268,7 @@ From {{etyl|enm|en}} {{term|floten|lang=enm}}, from {{etyl|ang|en}} {{term|floti
 {{trans-mid}}
 * Jèrriais: {{t|roa-jer|fliotter}}
 * Lithuanian: {{t+|lt|plaukti|impf}}
-* Russian: {{t+|ru|плыть|impf|tr=plyt’}}, {{t+|ru|дрейфовать|tr=dr’ejfovát’}} {{impf}} {{qualifier|of a ship}}
+* Russian: {{t+|ru|плыть|impf}}, {{t+|ru|дре́йфовать|impf}} {{qualifier|of a ship}}
 * Spanish: {{t+|es|flotar}}
 {{trans-bottom}}
 
