--- a/en/c/caught.6831.wikitext
+++ b/en/c/caught.6831.wikitext
@@ -6,7 +6,7 @@
 ** {{audio|en-uk-caught.ogg|Audio (UK)}}
 ** {{a|Australia|New Zealand}} {{IPA|[kʰoːt]}}
 ** {{audio|en-au-caught.ogg|Audio (Australia)}}
-** {{a|US}} {{IPA||[kʰɔt]}}
+** {{a|US}} {{IPA|[kʰɔt]}}
 ** {{audio|en-us-inlandnorth-caught.ogg|Audio (US-Inland North)}}
 * {{a|cot-caught}} {{IPA|/kɑt/|[kʰɑt]}}
 ** {{audio|en-us-caught.ogg|Audio (US cot-caught merged)}}
