--- a/en/y/Yugoslavia.2108.wikitext
+++ b/en/y/Yugoslavia.2108.wikitext
@@ -8,7 +8,7 @@
 * [[Jugoslavia]] (''common pre-WWII spelling'')
 
 ===Pronunciation===
-* {{IPA|[jugʊˈslɑvɪə]}}
+* {{IPA|/juːgəˈslɑːviə/}}
 
 ===Proper noun===
 {{en-proper noun}}
