redundant - video games *are* computer programs <port#24232255>

--- a/en/p/port.1843.wikitext
+++ b/en/p/port.1843.wikitext
@@ -262,7 +262,7 @@ From {{etyl|fro|en}} {{term|porter|lang=fr}}, from {{etyl|la|en}} {{term|portare
 # {{context|military|lang=en}} To hold or carry (a weapon) with both hands so that it lays diagonally across the front of the body, with the barrel or similar part near the left shoulder and the right hand grasping the small of the stock; or, to throw (the weapon) into this position on command.
 #: '''''Port''' arms!''
 #: ''...the angelic squadron...began to hem him round with '''ported''' spears.'' — [[w:John Milton|Milton]], ''[[w:Paradise Lost|Paradise Lost]]'' (1667), [[s:Paradise Lost/Book IV|book IV]]
-# {{context|computing|video games|lang=en}} To adapt, modify, or create a new version of, a program so that it works on a different platform; to adapt a console [[video game]] title to be sold and played on another brand of console. {{pedialite|Porting|Porting (computing)}}
+# {{context|computing|video games|lang=en}} To adapt, modify, or create a new version of, a program so that it works on a different platform. {{pedialite|Porting|Porting (computing)}}
 # {{context|telephony|lang=en}} To carry or transfer an existing telephone number from one telephone service provider to another.
 
 =====Derived terms=====
