--- a/en/y/Yugoslavia.2108.wikitext
+++ b/en/y/Yugoslavia.2108.wikitext
@@ -13,10 +13,10 @@
 ===Proper noun===
 {{en-proper noun}}
 
-# Former country on the [[Balkan Peninsula]]. In addition to [[Serbia]] and [[Montenegro]], [[Macedonia|Republic of Macedonia]], [[Bosnia and Herzegovina|Bosnia-Herzegovina]], [[Slovenia]], and [[Croatia]] were also part of the Yugoslav Federation prior to the 1990s.
+# A former country on the [[Balkan Peninsula]], made up of the now-independent nations of [[Serbia]] and [[Montenegro]], [[Macedonia]], [[Bosnia and Herzegovina]], [[Slovenia]], and [[Croatia]]; it disintegrated in the 1990s.
 
 ====Translations====
-{{trans-top|Former country in the Balkans}}
+{{trans-top|former country in the Balkans}}
 * Albanian: {{t|sq|Jugosllavia}}
 * Arabic: {{t|ar|يوغوسلافيا|f|tr=yughuslaafiya}}
 * Armenian: {{t|hy|Հարավսլավիա|tr=Haravslavia}}
