t+de:[[Fund]] ([[WT:EDIT|Assisted]]) <find#24235536>

--- a/en/f/find.6884.wikitext
+++ b/en/f/find.6884.wikitext
@@ -255,6 +255,7 @@ From {{etyl|enm|en}} {{term|finden|lang=enm}}, from {{etyl|ang|en}} {{term|finda
 * Finnish: {{t+|fi|löytö}}
 * French: {{t+|fr|trouvaille|f}}
 * Galician: {{t|gl|achado|m}}
+* German: {{t+|de|Fund|m}}
 * Hebrew: {{t|he|מציאה|f}}
 * Hungarian: {{t+|hu|lelet}}
 * Icelandic: {{t+|is|fundur|m}}
