t+de:[[Finden]] ([[WT:EDIT|Assisted]]) <find#24235551>

--- a/en/f/find.6884.wikitext
+++ b/en/f/find.6884.wikitext
@@ -273,6 +273,7 @@ From {{etyl|enm|en}} {{term|finden|lang=enm}}, from {{etyl|ang|en}} {{term|finda
 
 {{trans-top|act of finding}}
 * Bulgarian: {{t|bg|намиране|n|sc=Cyrl}}
+* German: {{t|de|Finden|n}}
 * Hebrew: {{t|he|מציאה|f}}
 * Macedonian: {{t|mk|наоѓање|n|tr=naóǵanje|sc=Cyrl}}
 {{trans-mid}}
