--- a/en/y/Yugoslavia.2108.wikitext
+++ b/en/y/Yugoslavia.2108.wikitext
@@ -70,6 +70,7 @@
 
 ====Derived terms====
 * [[Yugosphere]]
+* [[Yugo-nostalgia]] / [[Yugonostalgia]]
 
 ===See also===
 * [[Appendix:Countries of the world]]
