--- a/en/c/curtain.7391.wikitext
+++ b/en/c/curtain.7391.wikitext
@@ -107,6 +107,7 @@ From {{etyl|fro|en}} {{term|cortine|lang=fro}}, from {{etyl|la|en}} {{term|corti
 * Uzbek: {{t+|uz|parda}}
 * Venetian: {{t|vec|coltrìna|f}}
 * {{trreq|vo}}
+* Walloon: {{t+|wa|gordene|f}}
 * Welsh: {{t|cy|llen|f}}, {{t|cy|llenni|f-p}}
 * {{trreq|yi}}
 {{trans-bottom}}
@@ -145,6 +146,7 @@ From {{etyl|fro|en}} {{term|cortine|lang=fro}}, from {{etyl|la|en}} {{term|corti
 * Swahili: {{t+|sw|pazia}}
 * Swedish: {{t+|sv|ridå|c}}
 * Turkish: {{t+|tr|perde}}
+* Walloon: {{t+|wa|toele|f}}
 {{trans-bottom}}
 
 {{checktrans-top}}
