Converting simple translation table items to use {{t}} <flesh#24268929>

--- a/en/f/flesh.6883.wikitext
+++ b/en/f/flesh.6883.wikitext
@@ -162,7 +162,7 @@ From {{etyl|ang|en}} {{term/t|ang|flǣsc}}, from {{etyl|gem-pro|en}} {{term/t|ge
 * Scottish Gaelic: {{t|gd|feòil|f}}
 * Spanish: {{t+|es|carne|f}}
 * Swahili: {{t+|sw|ngozi}}
-* Telugu: [[గుజ్జు]] (gujju)
+* Telugu: {{t|te|గుజ్జు|tr=gujju}}
 * Volapük: {{t|vo|flukapulp}}, {{t|vo|pulp}}
 {{trans-bottom}}
 
