Converting simple translation table items to use {{t}} <curtain#24271110>

--- a/en/c/curtain.7391.wikitext
+++ b/en/c/curtain.7391.wikitext
@@ -128,7 +128,7 @@ From {{etyl|fro|en}} {{term|cortine|lang=fro}}, from {{etyl|la|en}} {{term|corti
 * Icelandic: {{t|is|leikhústjald|n}}, {{t+|is|tjald|n}}
 * Irish: {{t|ga|brat|m}}
 * Italian: {{t+|it|sipario|m}}
-* Japanese: [[幕]] ([[まく]], maku), [[緞帳]] ([[どんちょう]], donchō) with vertical move, [[引き幕]]　([[ひきまく]] hikimaku) with horizontal move
+* Japanese: {{t|ja|幕|tr=[[まく]], maku}}, [[緞帳]] ([[どんちょう]], donchō) with vertical move, [[引き幕]]　([[ひきまく]] hikimaku) with horizontal move
 * Macedonian: {{t|mk|кулиса|f|tr=kulísa}}
 {{trans-mid}}
 * Persian: {{t+|fa|پرده|tr=parde}}
