t+fr:[[biens]] ([[WT:EDIT|Assisted]]) <substance#24286901>

--- a/en/s/substance.7215.wikitext
+++ b/en/s/substance.7215.wikitext
@@ -112,6 +112,7 @@ From {{etyl|fro|en}} {{term|substance|lang=fro}}, from {{etyl|la|en}} {{term|sub
 *: {{trreq|cmn}}
 * Danish: {{t|da|formue}}
 * Finnish: {{t+|fi|vara|alt=varat|p}}
+* French: {{t+|fr|biens|m-p}}
 * German: {{t+|de|Substanz|f}}
 * Greek: {{t+|el|περιουσία|f|tr=periousía|sc=Grek}}
 *: Ancient: {{t|grc|οὐσία|f|tr=ousía|sc=polytonic}}
