Portuguese entry (semi-automated). <Israel#24300251>

--- a/en/i/Israel.2109.wikitext
+++ b/en/i/Israel.2109.wikitext
@@ -241,6 +241,15 @@ From {{etyl|he|en}} {{term|יִשְׂרָאֵל||Israel|lang=he|tr=yisra'él}}, 
 
 ----
 
+==Portuguese==
+
+===Proper noun===
+{{pt-proper noun|m}}
+
+# {{l/en|Israel}} {{gloss|the state}}
+
+----
+
 ==Romanian==
 {{wikipedia|lang=ro}}
 
