--- a/en/f/felt.6877.wikitext
+++ b/en/f/felt.6877.wikitext
@@ -55,6 +55,7 @@
 *: Cyrillic: {{t|sh|пуст|m}}, {{t|sh|филц|m}}
 *: Roman: {{t|sh|pust|m}}, {{t|sh|filc|m}}
 * Slovak: {{t|sk|plsť|f}}
+* Slovak: {{t|sk|plsť|f}}
 * Spanish: {{t|es|fieltro|m}}
 * Swedish: {{t+|sv|filt|c}}
 * Turkish: {{t+|tr|aba}}, {{t+|tr|keçe}}, {{t+|tr|fötr}}, {{t+|tr|kiyiz}}
