--- a/en/p/port.1843.wikitext
+++ b/en/p/port.1843.wikitext
@@ -245,6 +245,7 @@ From {{etyl|la|en}} {{term|porta||passage, gate|lang=la}}, reinforced in {{etyl|
 * Japanese: {{t+|ja|ポート|tr=pōto}}
 * Portuguese: {{t+|pt|porta|f}}
 * Russian: {{t+|ru|порт|m|tr=port}}
+* Serbo-Croatian: {{t|sh|vrata|f}}
 * Spanish: {{t+|es|puerto|m}}
 * Swahili: {{t+|sw|mabandari}}
 * Swedish: {{t+|sv|port|c}}
