/* Derived terms */ <butter#24384731>

--- a/en/b/butter.7388.wikitext
+++ b/en/b/butter.7388.wikitext
@@ -167,9 +167,10 @@ From {{etyl|enm|en}}, from {{etyl|ang|en}} {{term|butere||butter|lang=ang}}, fro
 * [[nut butter]]
 * [[palm-butter]]
 * [[peanut butter]]
+* [[process butter]]
+* [[renovated butter]]
 * [[rock butter]]
 * [[rum butter]]
-* [[run butter]]
 * [[shea butter]]
 * [[sugar-butter sauce]]
 * [[vegetable butter]]
