t+fa:[[کرکم]] ([[WT:EDIT|Assisted]]) <saffron#24394563>

--- a/en/s/saffron.4771.wikitext
+++ b/en/s/saffron.4771.wikitext
@@ -51,7 +51,7 @@ From {{etyl|fro|en}} {{term|safran|lang=fro}}, from {{etyl|ML.|en}} {{term|safra
 * Manx: {{t|gv|crogh|m}}
 * Marathi: {{t|mr|केसर|tr=kesar|sc=Deva}}
 * Norwegian: {{t+|no|safran}}
-* Persian: {{t+|fa|زعفران|tr=za,ferān}}
+* Persian: {{t+|fa|زعفران|tr=za,ferān}}, {{t+|fa|کرکم|tr=korkom|sc=fa-Arab}}
 * Polish: {{t+|pl|szafran|m}}, {{t+|pl|krokus|m}}
 * Portuguese: {{t+|pt|açafrão|m}}
 * Romanian: {{t+|ro|șofran|m}}
