--- a/en/b/blond.6878.wikitext
+++ b/en/b/blond.6878.wikitext
@@ -107,6 +107,7 @@ Alternate etymology connects {{etyl|frk|-}} {{term/t|frk|*blund}} to {{etyl|gem-
 * Korean: {{t+|ko|금발|tr=geumbar-ui|alt=금발의|sc=Kore}}
 * Latvian: {{t|lv|blonds}}
 * Macedonian: {{t|mk|рус|f|tr=rus}}, {{t|mk|плав|f|tr=plav}}
+* Portuguese: {{t+|pt|loiro}}, {{t+|pt|louro}}
 * Russian: {{t+|ru|светлый|tr=svétlyj}}, {{t+|ru|русый|tr=rúsyj|sc=Cyrl}}
 * Spanish: {{t+|es|rubio}}
 * Swedish: {{t+|sv|blond}}
@@ -129,6 +130,7 @@ Alternate etymology connects {{etyl|frk|-}} {{term/t|frk|*blund}} to {{etyl|gem-
 * Latvian: {{t|lv|gaišmatains}}, {{t|lv|blonds}}
 * Macedonian: {{t|mk|светол|m|tr=svétol}}, {{t|mk|белолик|m|tr=bélolik}}, {{t|mk|светла|f|tr=svétla}}, {{t|mk|белолика|f|tr=belólika}}
 * Persian: {{t+|fa|بور|tr=bur|sc=fa-Arab}}
+* Portuguese: {{t+|pt|loiro}}, {{t+|pt|louro}}
 * Russian: {{t+|ru|белый|tr=bélyj}}
 * Swedish: {{t+|sv|ljus}}, {{t+|sv|ljushyad}}, blond
 * Volapük: {{t+|vo|blonik}}, {{qualifier|obsolete}} {{t|vo|blönik}}
