--- a/en/b/beautiful.7394.wikitext
+++ b/en/b/beautiful.7394.wikitext
@@ -125,7 +125,7 @@ The comparatives '''[[beautifuler]]''' and '''[[beautifuller]]''', and the super
 * Old Provençal: {{t|pro|bel}}
 * Persian: {{t+|fa|زیبا|tr=zibâ}}, {{t+|fa|قشنگ|tr=qašang}}
 * Polish: {{t+|pl|piękny}}
-* Portuguese: {{t+|pt|belo}}, {{t+|pt|bonito}}
+* Portuguese: {{t+|pt|belo}}, {{t+|pt|bonito}}, {{t+|pt|lindo}}
 * Punjabi: {{t|pa|ਸੁਹਣਾ|tr=suhṇā|m}}, {{t|pa|ਸੁਹਣੀ|tr=suhṇī|f}}
 * Romanian: {{t+|ro|frumos|m|n}}, {{t|ro|frumoasă|f}}
 * Russian: {{t+|ru|красивый|tr=krasívyj}}, {{t+|ru|прекрасный|tr=prekrásnyj}}
@@ -174,6 +174,7 @@ The comparatives '''[[beautifuler]]''' and '''[[beautifuller]]''', and the super
 * Limburgish: {{t|li|sjoen}}
 * Macedonian: {{t|mk|убаво|n|tr=úbavo}}
 * Malay: {{t|ms|indah}}
+* Portuguese: {{t+|pt|limpo}}
 * Spanish: {{t+|es|bueno}}, {{t+|es|despejado}}, {{t+|es|alegre}}
 * Swedish: {{t+|sv|fint|n}}, {{t+|sv|vackert|n}}
 * Tamil: {{t+|ta|அழகிய|tr=azhagiya}}
