t+sms:[[zääˊvesǩ]] ([[WT:EDIT|Assisted]]) <curtain#24519775>

--- a/en/c/curtain.7391.wikitext
+++ b/en/c/curtain.7391.wikitext
@@ -94,6 +94,7 @@ From {{etyl|fro|en}} {{term|cortine|lang=fro}}, from {{etyl|la|en}} {{term|corti
 * Serbo-Croatian:
 *: Cyrillic: (''Ekavian'') {{t|sh|за̑веса|f|sc=Cyrl}}, (''Ijekavian'') {{t|sh|за̑вјеса|f|sc=Cyrl}}; {{t|sh|за́стор|m|sc=Cyrl}}
 *: Roman: (''Ekavian'') {{t|sh|zȃvesa|f}}, (''Ijekavian'') {{t|sh|zȃvjesa|f}}; {{t|sh|zástor|m}}
+* Skolt Sami: {{t|sms|zääˊvesǩ}}
 * Slovak: {{t|sk|opona|f}}
 * Slovene: {{t|sl|zavésa|f}}
 * {{trreq|so}}
