--- a/en/c/come.6838.wikitext
+++ b/en/c/come.6838.wikitext
@@ -109,7 +109,7 @@ The collocations “[[come with]]” and “[[come along]]” mean {{term|accomp
 * Armenian: {{t+|hy|գալ|tr=gal|sc=Armn}}
 * Aromanian: {{t|rup|vin}}, {{t|rup|yin}}
 * {{trreq|as}}
-* Avestan: {{t|ae|ǰamaiti}}
+* Avestan: {{t|ae|tr=ǰamaiti}}
 * Azeri: {{t+|az|gəlmək}}
 * Bakhtiari: {{t|bqi|اودن|tr=aweðen|sc=fa-Arab}}
 * Basque: {{t|eu|etorri}}
