--- a/en/f/feel.6876.wikitext
+++ b/en/f/feel.6876.wikitext
@@ -224,6 +224,7 @@ From {{etyl|enm|en}} {{term|felen|lang=enm}}, from {{etyl|ang|en}} {{term/t|ang|
 * Latin: {{t+|la|sentio}}
 * Norwegian: {{t+|no|føle}}
 * Polish: {{t+|pl|uważać}}, {{t|pl|mieć uczucie}}
+* Portuguese: {{t|pt|pensar que}}, {{t|pt|crer que}}, {{t|pt|achar que}}
 * Russian: {{t+|ru|чувствовать|tr=čúvstvovatʹ}}, {{t+|ru|полагать|tr=polagátʹ}}, {{t+|ru|думать|tr=dúmatʹ}}
 * Spanish: {{t+|es|sentir}}, {{t+|es|creer}}
 {{trans-bottom}}
@@ -236,6 +237,7 @@ From {{etyl|enm|en}} {{term|felen|lang=enm}}, from {{etyl|ang|en}} {{term/t|ang|
 {{trans-mid}}
 * Latvian: {{t|lv|taustīt}}
 * Norwegian: {{t+|no|kjenne|alt=kjenne etter}}, {{t+|no|føle}}
+* Portuguese: {{t|pt|palpar}}
 * Russian: {{t+|ru|щупать|impf|tr=ščúpatʹ|sc=Cyrl}}, {{t+|ru|ощупывать|impf|tr=oščúpyvatʹ|sc=Cyrl}}, {{t+|ru|нащупывать|impf|tr=naščúpyvatʹ|sc=Cyrl}}
 {{trans-bottom}}
 
@@ -250,6 +252,7 @@ From {{etyl|enm|en}} {{term|felen|lang=enm}}, from {{etyl|ang|en}} {{term/t|ang|
 {{trans-mid}}
 * Ngazidja Comorian: {{t|zdj|udjihisi}}
 * Polish: {{t+|pl|czuć}}, {{t+|pl|czuć się}}
+* Portuguese: {{t+|pt|sentir}}
 * Russian: {{t+|ru|чувствовать|impf|tr=čúvstvovatʹ}}, {{t+|ru|ощущать|impf|tr=oščuščátʹ|sc=Cyrl}}
 * Slovene: {{t+|sl|čutiti}}
 * Sorbian:
@@ -330,6 +333,7 @@ From {{etyl|enm|en}} {{term|felen|lang=enm}}, from {{etyl|ang|en}} {{term/t|ang|
 * Norwegian:
 *: Bokmål: {{t|nb|berøring|m}}
 {{trans-mid}}
+* Portuguese: {{t+|pt|tato|m}}
 * Spanish: {{t+|es|tacto|m}}
 {{trans-bottom}}
 
