--- a/en/c/come.6838.wikitext
+++ b/en/c/come.6838.wikitext
@@ -232,6 +232,7 @@ The collocations “[[come with]]” and “[[come along]]” mean {{term|accomp
 {{trans-mid}}
 * Norwegian: {{t|no|ankomme}}, {{t+|no|komme}}
 * Persian: {{t+|fa|رسیدن|tr=ra(e)sidan|sc=fa-Arab}}
+* Portuguese: {{t+|pt|chegar}}
 * Scottish Gaelic: {{t|gd|thig}}
 * Serbo-Croatian: {{t|sh|doći}}
 * Sorbian:
