t+pt:[[oliveira]] t+pt:[[verde-oliva]] ([[WT:EDIT|Assisted]]) <olive#24552780>

--- a/en/o/olive.4769.wikitext
+++ b/en/o/olive.4769.wikitext
@@ -101,7 +101,7 @@
 * Occitan: {{t+|oc|oliva|f}}
 * Persian: {{t+|fa|زیتون|tr=zeytun}}
 * Polish: {{t+|pl|oliwka}}
-* Portuguese: {{t+|pt|azeitona|f}}, {{t+|pt|oliva|f}}
+* Portuguese: {{t+|pt|azeitona|f}}, {{t+|pt|oliva|f}}, {{t+|pt|oliveira|f}}
 * Romanian: {{t+|ro|măslină|f}}, {{t+|ro|olivă|f}}
 * Romansch: {{t|rm|uliva|f}}, {{t|rm|oliva|f}}, {{t|rm|uleiva|f}}
 * Russian: {{t+|ru|оливка|f|tr=olívka}}, {{t+|ru|маслина|f|tr=maslína}}, {{t+|ru|маслинка|f|tr=maslínka|sc=Cyrl}}
@@ -209,7 +209,7 @@
 * Finnish: {{t+|fi|oliivinvihreä}}
 * Japanese: {{t|ja|オリーブ色|tr=orību-iro}}
 * Kurdish: {{t|ku|zeytûnî}}, [[reng]][[zeytûnî]]
-* Portuguese: {{t|pt|verde-azeitona}}
+* Portuguese: {{t|pt|verde-azeitona}}, {{t|pt|verde-oliva}}
 * Russian: {{t+|ru|оливковый|tr=olívkovyj}}
 {{trans-mid}}
 * Serbo-Croatian:
