--- a/en/f/France.2105.wikitext
+++ b/en/f/France.2105.wikitext
@@ -217,6 +217,7 @@ From {{etyl|fro|fr}} {{term|France|lang=fro}}, from {{etyl|LL.|fr}} {{term|Franc
 
 # {{l|en|France}} {{gloss|country}}
 # {{given name|female|lang=fr}}
+# A [[surname]].
 
 ====Related terms====
 * [[François]], [[Françoise]] (given names)
