t+hy:[[զգալ]] t+hy:[[շոշափել]] t+hy:[[համարել]] ([[WT:EDIT|Assisted]]) <feel#24564086>

--- a/en/f/feel.6876.wikitext
+++ b/en/f/feel.6876.wikitext
@@ -93,6 +93,7 @@ From {{etyl|enm|en}} {{term|felen|lang=enm}}, from {{etyl|ang|en}} {{term/t|ang|
 * Albanian: {{t|sq|ndiej}}
 * American Sign Language: {{t|ase|Open8@Chest-PalmBack Open8@Sternum-PalmBack}}
 * Arabic: {{t+|ar|شعر|tr=šáʿara}}
+* Armenian: {{t|hy|զգալ|sc=Armn}}, {{t|hy|շոշափել|sc=Armn}}
 * Aromanian: {{t|rup|simtu}}
 * Belarusian: {{t|be|адчуваць|impf|tr=adčuvácʹ|sc=Cyrl}}, {{t|be|адчуць|pf|tr=adčúcʹ|sc=Cyrl}}
 * Bulgarian: {{t+|bg|опипвам|sc=Cyrl}}
@@ -210,6 +211,7 @@ From {{etyl|enm|en}} {{term|felen|lang=enm}}, from {{etyl|ang|en}} {{term/t|ang|
 {{trans-top|transitive: to think or believe}}
 * American Sign Language: {{t|ase|Open8@Chest-PalmBack Open8@Sternum-PalmBack}}
 * Arabic: {{t+|ar|شعر|tr=šáʿara}}
+* Armenian: {{t|hy|համարել|sc=Armn}}
 * Bulgarian: {{t+|bg|считам|sc=Cyrl}}
 * Chinese:
 *: Mandarin: {{t|cmn|覺得|sc=Hani}}, {{t+|cmn|觉得|tr=juéde|sc=Hani}}, {{t+|cmn|感覺|sc=Hani}}, {{t+|cmn|感觉|tr=gǎnjué|sc=Hani}}
