--- a/en/c/come.6838.wikitext
+++ b/en/c/come.6838.wikitext
@@ -109,6 +109,7 @@ The collocations “[[come with]]” and “[[come along]]” mean {{term|accomp
 * Armenian: {{t+|hy|գալ|tr=gal|sc=Armn}}
 * Aromanian: {{t|rup|vin}}, {{t|rup|yin}}
 * {{trreq|as}}
+* Asturian: {{t+|ast|venir}}
 * Avestan: {{t|ae|tr=ǰamaiti}}
 * Azeri: {{t+|az|gəlmək}}
 * Bakhtiari: {{t|bqi|اودن|tr=aweðen|sc=fa-Arab}}
