t+pt:[[boia]] t+pt:[[flutuar]] t+pt:[[boiar]] t+pt:[[pairar]] ([[WT:EDIT|Assisted]]) <float#24620993>

--- a/en/f/float.8440.wikitext
+++ b/en/f/float.8440.wikitext
@@ -76,6 +76,7 @@ From {{etyl|enm|en}} {{term|floten|lang=enm}}, from {{etyl|ang|en}} {{term|floti
 * Lithuanian: {{t|lt|plaustas|m}} {{qualifier|raft}}, {{t|lt|plūdė|f}} {{qualifier|of an angle or a net}}
 * Maori: {{t|mi|kārewa}}
 * Norwegian: {{t|no|dupp|m}} (angling float)
+* Portuguese: {{t+|pt|boia|f}}
 * Romanian: {{t|ro|plută|f}}, {{t|ro|plutitor|n}}
 * Russian: {{t+|ru|плот|m|tr=plot}} {{qualifier|raft}}, {{t+|ru|поплавок|m|tr=poplavók}} {{qualifier|of an angle or a net}}
 * Serbo-Croatian:
@@ -241,6 +242,7 @@ From {{etyl|enm|en}} {{term|floten|lang=enm}}, from {{etyl|ang|en}} {{term|floti
 * Japanese: {{t|ja|浮かぶ|tr=ukabu}}, {{t|ja|浮く|tr=uku}}
 * Jèrriais: {{t|roa-jer|fliotter}}
 * Lithuanian: {{t|lt|plūduriuoti|impf}}, {{t+|lt|plaukti|impf}}
+* Portuguese: {{t+|pt|flutuar}}, {{t+|pt|boiar}}
 * Russian: {{t|ru|[[держа́ться]] [[на]] [[вода|воде́]]}}
 * Spanish: {{t+|es|flotar}}
 {{trans-bottom}}
@@ -257,6 +259,7 @@ From {{etyl|enm|en}} {{term|floten|lang=enm}}, from {{etyl|ang|en}} {{term|floti
 * Malay:
 *: Rumi: {{t|ms|ambang}}
 *: Jawi: {{t|ms|امبڠ|sc=Arab}}
+* Portuguese: {{t+|pt|flutuar}}, {{t+|pt|pairar}}
 * Russian: {{t+|ru|пари́ть|impf}}, {{t+|ru|плыть|impf}}
 * Spanish: {{t+|es|flotar}}
 {{trans-bottom}}
