--- a/en/早/早.16913.wikitext
+++ b/en/早/早.16913.wikitext
@@ -38,12 +38,8 @@ One possibility is that 早 is a pictograph of [[sun]] (日) over the [[horizon]
 * {{ja-readings|on=[[そう]] (sō), [[さつ]] (satsu)|kun=[[はやい]] (hayai), [[はや]] (haya), [[さ]] (sa)}}
 
 ===Noun===
-{{ja-noun|k|hira=はや|rom=haya}}
+{{ja-noun|はや}}
 # already; now
-
-[[Category:Japanese terms written with one Han script character]]
-[[Category:Japanese terms spelled with 早]]
-
 ----
 
 ==Korean==
