--- a/en/p/plum.4770.wikitext
+++ b/en/p/plum.4770.wikitext
@@ -14,7 +14,7 @@ From {{etyl|ang|en}} {{term/t|ang|plūme}}, from {{etyl|gem-pro|en}} {{term/t|ge
 [[Image:Plum on tree.jpg|thumb|A plum growing on a plum tree.]]
 {{en-noun}}
 
-# The edible, fleshy stone [[fruit]] of {{taxlink|Prunus domestica|species}}, often of a dark red or purple colour.
+# The edible, fleshy [[stone fruit]] of {{taxlink|Prunus domestica|species|noshow=1}}, often of a dark red or purple colour.
 # The [[stone-fruit]] tree which bears this fruit, ''Prunus domestica''.
 # A dark [[bluish]]-[[red]] [[color]]/[[colour]], the colour of some plums.
 #: {{color panel|5F4951}}
@@ -23,7 +23,7 @@ From {{etyl|ang|en}} {{term/t|ang|plūme}}, from {{etyl|gem-pro|en}} {{term/t|ge
 # A [[raisin]], when used in a pudding or cake.
 # {{context|pejorative|lang=en}} A [[fool]], [[idiot]]
 # {{context|slang|usually in plural|lang=en}} A [[testicle]].
-# The edible, fleshy stone of {{taxlink|Prunus mume|species}}, an Asian fruit more closely related to the [[apricot]] than the plum, usually consumed pickled, dried, or as a juice or wine; [[ume]].
+# The edible, fleshy stone fruit of {{taxlink|Prunus mume|species|species|noshow=1}}, an Asian fruit more closely related to the [[apricot]] than the plum, usually consumed pickled, dried, or as a juice or wine; [[ume]].
 # The tree which bears this fruit, ''Prunus mume''. See ''[[plum blossom]]''.
 
 =====Synonyms=====
