--- a/en/p/plum.4770.wikitext
+++ b/en/p/plum.4770.wikitext
@@ -28,7 +28,7 @@ From {{etyl|ang|en}} {{term/t|ang|plūme}}, from {{etyl|gem-pro|en}} {{term/t|ge
 
 =====Synonyms=====
 * {{sense|tree}} [[plum tree]]
-* {{sense|edible fleshy stone of Prunus mume}} [[ume]]
+* {{sense|edible fleshy fruit of ''Prunus mume''}} [[ume]]
 
 =====Derived terms=====
 {{rel-top4|Derived terms with proper nouns}}
