/* Translingual */ added "ids=" ⿱氏日 (composition) data to /Han char/ template <昏#24822383>

--- a/en/昏/昏.16951.wikitext
+++ b/en/昏/昏.16951.wikitext
@@ -1,7 +1,7 @@
 ==Translingual==
 
 ===Han character===
-{{Han char|rn=72|rad=日|as=04|sn=8|four=7260<sub>4</sub>|canj=竹心日 (HPA)}}
+{{Han char|rn=72|rad=日|as=04|sn=8|four=7260<sub>4</sub>|canj=竹心日 (HPA)|ids=⿱[[氏]][[日]]}}
 
 # [[dusk]], [[nightfall]], [[twilight]], [[dark]]
 
