/* Middle English */ <flesh#24880199>

--- a/en/f/flesh.6883.wikitext
+++ b/en/f/flesh.6883.wikitext
@@ -264,7 +264,7 @@ From {{etyl|emn|en}} {{term|flesh|lang=enm}}, from {{etyl|ang|en}} {{term/t|ang|
 See {{term|flesh|lang=en}}.
 
 ===Alternative forms===
-* [[fleisch]], [[flessh]]
+* [[flech]], [[fleesh]], [[fleisch]], [[fleish]], [[flesch]], [[flessh]]
 
 ===Noun===
 {{head|enm|noun}}
