t+ast:[[guapu]] t+ast:[[formosu]] ([[WT:EDIT|Assisted]]) <beautiful#24880420>

--- a/en/b/beautiful.7394.wikitext
+++ b/en/b/beautiful.7394.wikitext
@@ -62,6 +62,7 @@ The comparatives '''[[beautifuler]]''' and '''[[beautifuller]]''', and the super
 * Arabic: {{t|ar|جميل|tr=jamiil}}
 *: Moroccan Arabic: {{t|ary|زوين|m|tr=zwin}}
 * Armenian: {{t|hy|գեղեցիկ|tr=geġec'ik|sc=Armn}}, {{t|hy|սիրուն|tr=sirun|sc=Armn}}
+* Asturian: {{t|ast|guapu}}, {{t|ast|formosu}}
 * Azeri: {{t+|az|qəşəng}}
 *: Cyrillic: {{t|az|гәшәнҝ|sc=Cyrl}}
 * Belarusian: {{t|be|выдатны|tr=vydátny}}
