t+ast:[[etcétera]] t+gl:[[etcétera]] t+ca:[[etcètera]] t-balance ([[WT:EDIT|Assisted]]) <et cetera#24942049>

--- a/en/e/et cetera.7211.wikitext
+++ b/en/e/et cetera.7211.wikitext
@@ -37,8 +37,10 @@ From {{etyl|la|en}} {{term|et cētera||lang=la|and the rest" or "and so forth}}
 ====Translations====
 {{trans-top|and so on}}
 * Arabic: {{t|ar|وهَلُمَّ جَرًّا|tr=wa-halumma jaraa|sc=Arab}}, {{t|ar|إلخ|tr='ilakh|sc=Arab}}, {{t|ar|إلى آخره|tr='íla 'aakhirih|sc=Arab}}
+* Asturian: {{t|ast|etcétera}}
 * Bengali: {{t+|bn|ইত্যাদি|tr=ittêdi|sc=Beng}}
 * Bulgarian: {{t|bg|и така нататък}}, {{t|bg|и т.н.}}
+* Catalan: {{t|ca|etcètera}}
 * Chinese:
 *: Mandarin: {{t+|cmn|等|tr=děng|sc=Hani}}, {{t+|cmn|等等|tr=děngděng|sc=Hani}}
 * Czech: {{t|cs|a tak dále}}, {{t+|cs|atd.}}
@@ -49,6 +51,7 @@ From {{etyl|la|en}} {{term|et cētera||lang=la|and the rest" or "and so forth}}
 * Faroese: {{t|fo|og so framvegis}}, {{t|fo|osfr.}}
 * Finnish: {{t|fi|ja niin edelleen}}, {{t+|fi|jne.}}, {{t|fi|ynnä muuta}}
 * French: {{t+|fr|et cétéra}}, {{t+|fr|etc.}}, {{t+|fr|et cætera}}
+* Galician: {{t|gl|etcétera}}
 * German: {{t+|de|und so weiter}}, {{t+|de|usw.}}, {{t+|de|etc.}}, {{t+|de|et cetera}}
 * Greek: {{t|el|και ούτω καθεξής|tr=kai oúto kathexís}}, {{t+|el|κοκ|tr=kok}}
 * Hebrew: {{t|he|וכדומה|sc=Hebr}}
@@ -56,9 +59,9 @@ From {{etyl|la|en}} {{term|et cētera||lang=la|and the rest" or "and so forth}}
 * Hungarian: {{t+|hu|satöbbi}}, {{t+|hu|stb.}}, {{t|hu|és a többi}}, {{t|hu|s a többi}}, {{t|hu|és így tovább}}
 * Icelandic: {{t+|is|og svo framvegis}}, {{t|is|o. s. frv.}}
 * Italian: {{t+|it|eccetera}}
+{{trans-mid}}
 * Japanese: {{t|ja|など|tr=nado|sc=Jpan}}, {{t+|ja|等|tr=とう, tō|sc=Jpan}}
 * Korean: {{t+|ko|기타|tr=gita|sc=Kore}}
-{{trans-mid}}
 * Latin: {{t+|la|et cetera}}
 * Latvian: {{t|lv|un tā tālāk}}, {{t|lv|utt.}}
 * Lithuanian: {{t|lt|ir taip toliau}}, {{t|lt|ir t.t.}}
