Undo revision 24997310 by [[Special:Contributions/Primus, being known as|Primus, being known as]] ([[User talk:Primus, being known as|talk]]) if you want to delete a sense, take it to [[WT:RFD]] <fight#24997460>

--- a/en/f/fight.6879.wikitext
+++ b/en/f/fight.6879.wikitext
@@ -18,7 +18,7 @@ The noun is from {{etyl|ang|en}} {{term|feoht|lang=ang}}, from the verb; compare
 {{en-verb|fights|fighting|fought|'''[[fought]]''' ''or'' {{qualifier|archaic}} '''[[foughten]]'''}}
 
 # {{context|intransitive|lang=en}} To [[contend]] in physical conflict, either singly or in war, battle etc.
-#: {{usex|lang=en|The two gladiators have been '''fighting''' for more than half an hour.}}
+#: {{usex|lang=en|The two boxers have been '''fighting''' for more than half an hour.}}
 #: {{usex|lang=en|A wounded animal will '''fight''' like a maniac.}}
 # {{context|intransitive|lang=en}} To [[strive]] for; to campaign or [[contend]] for success.
 #: {{usex|lang=en|He '''fought''' for the Democrats in the last election.}}
@@ -257,6 +257,8 @@ The noun is from {{etyl|ang|en}} {{term|feoht|lang=ang}}, from the verb; compare
 # {{context|archaic|lang=en}} A [[battle]] between opposing armies.
 # A [[physical]] [[confrontation]] or [[combat]] between two or more people or groups.
 #: {{usex|Watch your language, are you looking for a '''fight'''?|lang=en}}
+# {{context|sports|lang=en}} A [[boxing]] or [[martial arts]] [[match]].
+#: {{usex|I'm going to Nick’s to watch the big '''fight''' tomorrow night.|lang=en}}
 # A [[conflict]], possibly nonphysical, with opposing ideas or forces; [[strife]].
 #* {{quote-book|year=1963|author={{w|Margery Allingham}}|title={{w|The China Governess}}
 |chapter=18|url=http://openlibrary.org/works/OL2004261W
