t+hy:[[պատկերակ]] ([[WT:EDIT|Assisted]]) <icon#25007452>

--- a/en/i/icon.6837.wikitext
+++ b/en/i/icon.6837.wikitext
@@ -115,6 +115,7 @@ From {{etyl|la|en}} {{term|icon|lang=la}}, from {{etyl|grc|en}} {{term|εἰκώ
 
 {{trans-top|small picture, computer icon}}
 * Arabic: {{t|ar|أيقونة|f|tr='ayqūna}}
+* Armenian: {{t|hy|պատկերակ|sc=Armn}}
 * Catalan: {{t|ca|icona|f}}
 * Chinese:
 *: Mandarin: {{t|cmn|圖標|sc=Hani}}, {{t|cmn|图标|tr=túbiāo|sc=Hani}}
