--- a/en/c/creep.6841.wikitext
+++ b/en/c/creep.6841.wikitext
@@ -74,7 +74,7 @@ From {{etyl|enm|en}} {{term|crepen|lang=enm}}, from {{etyl|ang|en}} {{term/t|ang
 * Hungarian: {{t+|hu|lopakodik}}, {{t+|hu|oson}}
 {{trans-mid}}
 * Japanese: {{t|ja|忍び寄る|tr=shinobi-yoru|sc=Jpan}}
-* Maori: {{t|mi|whakaninihi}}
+* Maori: {{t|mi|whakaninihi}}, {{t|mi|tapanihi}}
 * Russian: {{t+|ru|красться|tr=krástʹsja}}
 * Scottish Gaelic: {{t|gd|èalaidh}}
 * Swedish: {{t+|sv|smyga}}
