--- a/en/坌/坌.13007.wikitext
+++ b/en/坌/坌.13007.wikitext
@@ -3,10 +3,12 @@
 ===Han character===
 {{Han char|rn=32|rad=土|as=04|sn=7|four=8010<sub>4</sub>|canj=金尸竹土 (CSHG)|ids=⿱[[分]][[土]]}}
 
-# [[dust]], [[earth]]
-# a [[bank]] of earth
-# to [[dig]]
-# to [[bring]] [[together]]
+# fly upward
+# [[gush]]
+# [[assemble]], [[gather]]
+# turn up the soil
+# [[clumsy]]
+# [[dust]]
 
 ====References====
 * {{Han ref|kx=0225.090|dkj=04926|dj=0460.020|hdz=10424.040|uh=574C|ud=22348|bh=CAAC|bd=51884}}
