t+it:[[saltare]] ([[WT:EDIT|Assisted]]) <cut#25192194>

--- a/en/c/cut.6843.wikitext
+++ b/en/c/cut.6843.wikitext
@@ -671,6 +671,7 @@ From {{etyl|enm|en}} {{term|cutten|lang=enm}}, {{term|kitten|lang=enm}}, {{term|
 {{trans-mid}}
 * Hebrew: {{t+|he|הבריז|tr=hivríz}}
 * Icelandic: {{t|is|skrópa}}
+* Italian: {{t+|it|saltare}}
 * Japanese: {{t+|ja|サボる|tr=saboru}}
 * Portuguese: {{t+|pt|matar}}, {{t+|pt|faltar}}
 * Spanish: {{t+|es|faltar}}
