--- a/en/p/play.8442.wikitext
+++ b/en/p/play.8442.wikitext
@@ -546,7 +546,7 @@ From {{etyl|enm|en}} {{term|pleye|lang=enm}}, from {{etyl|ang|en}} {{term/t|ang|
 * Swedish: {{t+|sv|drag|n}}
 {{trans-bottom}}
 
-=====Derived terms=====
+====Derived terms====
 {{rel-top3|Terms derived from the noun or verb ''play''}}
 * [[airplay]]
 * [[all work and no play makes Jack a dull boy]]
@@ -566,6 +566,7 @@ From {{etyl|enm|en}} {{term|pleye|lang=enm}}, from {{etyl|ang|en}} {{term/t|ang|
 * [[long play]]
 * [[nativity play]]
 * [[mystery play]]
+* [[outdoor play]]
 * [[passion play]]
 * [[pissplay]]
 * [[playact]]/[[play-act]]
@@ -655,6 +656,8 @@ From {{etyl|enm|en}} {{term|pleye|lang=enm}}, from {{etyl|ang|en}} {{term/t|ang|
 * [[when the cat's away the mice will play]]
 * [[word play]]/[[wordplay]]
 {{rel-bottom}}
+====See also====
+* [[outdoor]]
 
 ===Statistics===
 * {{rank|London|save|length|580|play|remained|bear|service}}
