--- a/en/慝/慝.15729.wikitext
+++ b/en/慝/慝.15729.wikitext
@@ -1,9 +1,9 @@
 ==Translingual==
 
 ===Han character===
-{{Han char|rn=61|rad=心|as=11|sn=15|four=7133<sub>1</sub>|canj=尸口心 (SRP)}}
+{{Han char|rn=61|rad=心|as=11|sn=15|four=7133<sub>1</sub>|canj=尸口心 (SRP)|ids=⿱[[匿]][[心]]}}
 
-# do evil in secret
+# do [[evil]] in [[secret]]
 # [[evil]], [[vice]]
 
 ====References====
