--- a/en/昤/昤.16972.wikitext
+++ b/en/昤/昤.16972.wikitext
@@ -25,7 +25,7 @@
 ==Korean==
 
 ===Hanja===
-{{ko-hanja|hangeul=령>영|eumhun=|rv=ryeong>yeong|mr=ryŏng>yŏng|y=lyeng>yeng}}
+{{ko-hanja|hangeul=[[령]]>[[영]]|eumhun=|rv=ryeong>yeong|mr=ryŏng>yŏng|y=lyeng>yeng}}
 
 # {{defn|lang=ko|sort=日05}}
 
