--- a/en/b/bridge.7389.wikitext
+++ b/en/b/bridge.7389.wikitext
@@ -19,34 +19,37 @@ From {{etyl|enm|en}} {{term|brigge|lang=enm}}, from {{etyl|ang|en}} {{term|brycÄ
 {{en-noun}}
 
 # A [[construction]] or [[natural]] [[feature]] that [[span]]s a [[divide]].
+#: {{usex|The rope '''bridge''' crosses the river.|lang=en}}
+#*{{quote-book|year=1898|author={{w|Winston Churchill (novelist)|Winston Churchill}}
+|title={{w|The Celebrity}}|chapter=8
+|passage=Now we plunged into a deep shade with the boughs lacing each other overhead, and crossed dainty, rustic '''bridges''' over the cold trout-streams, the boards giving back the clatter of our horses' feet: or anon we shot into a clearing, with a colored glimpse of the lake and its curving shore far below us.}}
 #* {{quote-magazine|date=2013-06-29|volume=407|issue=8842|page=28|magazine={{w|The Economist}}
 |title=[http://www.economist.com/news/asia/21580209-natural-disaster-aggravated-poor-response-high-and-wet High and wet]
 |passage=Floods in northern India, mostly in the small state of Uttarakhand, have wrought disaster on an enormous scale. The early, intense onset of the monsoon on June 14th swelled rivers, washing away roads, '''bridges''', hotels and even whole villages. Rock-filled torrents smashed vehicles and homes, burying victims under rubble and sludge.}}
-#: {{usex|The rope '''bridge''' crosses the river.|lang=en}}
-# {{senseid|en|bony ridge of the nose}}{{context|anatomy|lang=en}} The [[upper]] [[bony]] [[ridge]] of the [[human]] [[nose]].
+# {{senseid|en|bony ridge of the nose}}{{label|en|anatomy}} The [[upper]] [[bony]] [[ridge]] of the [[human]] [[nose]].
 #: {{usex|Rugby players often break the '''bridge''' of their noses.|lang=en}}
-# {{context|medicine|lang=en}} A rudimentary procedure before definite solution
-#: {{usex|ECMO is used as a bridge to surgery to stabilize the patient.|lang=en}}
-# {{context|dentistry|lang=en}} A [[prosthesis]] replacing one or several adjacent [[tooth|teeth]].
+# {{label|en|medicine}} A rudimentary procedure before definite solution
+#: {{usex|ECMO is used as a '''bridge''' to surgery to stabilize the patient.|lang=en}}
+# {{label|en|dentistry}} A [[prosthesis]] replacing one or several adjacent [[tooth|teeth]].
 #: {{usex|The dentist pulled out the decayed tooth and put in a '''bridge'''.|lang=en}}
-# {{context|nautical|lang=en}} An [[elevated]] [[platform]] above the upper [[deck]] of a [[mechanically]] [[propel]]led [[ship]] from which it is [[navigate]]d and from which all activities on deck can be seen and controlled by the [[captain]], etc; smaller ships have a [[wheelhouse]], and [[sailing ship]]s were controlled from a [[quarterdeck]].
+# {{label|en|nautical}} An [[elevated]] [[platform]] above the upper [[deck]] of a [[mechanically]] [[propel]]led [[ship]] from which it is [[navigate]]d and from which all activities on deck can be seen and controlled by the [[captain]], etc; smaller ships have a [[wheelhouse]], and [[sailing ship]]s were controlled from a [[quarterdeck]].
 #: {{usex|The first officer is on the '''bridge'''.|lang=en}}
-# {{context|music|lang=en}} The piece, on [[string instrument]]s, that supports the [[string]]s from the [[sounding board]].
-# {{context|computing|lang=en}} A device which connects two or more [[computer]] [[bus|buses]], typically in a transparent manner.
+# {{label|en|music}} The piece, on [[string instrument]]s, that supports the [[string]]s from the [[sounding board]].
+# {{label|en|computing}} A device which connects two or more [[computer]] [[bus|buses]], typically in a transparent manner.
 #: {{usex|This chip is the '''bridge''' between the front-side bus and the I/O bus.|lang=en}}
-# {{context|communication|lang=en}} A system which connects two or more [[LAN|local area networks]] at layer 2.
+# {{label|en|communication}} A system which connects two or more [[LAN|local area networks]] at layer 2.
 #: {{usex|The LAN '''bridge''' uses a spanning tree algorithm.|lang=en}}
-# {{context|music|lang=en}} A song contained within another song, often demarcated by meter, key, or melody.
+# {{label|en|music}} A song contained within another song, often demarcated by meter, key, or melody.
 #: {{usex|The lyrics in the song's '''bridge''' inverted its meaning.|lang=en}}
-# {{context|chemistry|lang=en}} An [[intramolecular]] [[valence bond]], [[atom]] or [[chain]] of atoms that [[connect]]s two different parts of a [[molecule]]; the atoms so connected being [[bridgehead]]s.
-# {{context|electronics|lang=en}} An unintended [[solder]] [[connection]] between two or more [[component]]s or pins.
-# {{context|electronics|lang=en}} Any of several [[electrical]] [[device]]s that [[measure]] characteristics such as [[impedance]] and [[inductance]] by [[balancing]] different parts of a [[circuit]]
-# {{context|billiards|snooker|pool|lang=en}} A particular form of one hand placed on the table to support the [[cue]] when making a shot in cue sports.
-# {{context|billiards|snooker|pool|lang=en}} A cue modified with a convex arch-shaped notched head attached to the narrow end, used to support a player's (shooter's) cue for extended or tedious shots. Also called a [[spider]].
-# {{context|diplomacy|lang=en}} A statement, such as an [[offer]], that signals a possibility of accord.
-# {{context|graph theory|lang=en}} An [[edge]] which, if [[remove]]d, changes a [[connected graph]] to one that is not connected.
-# {{context|wrestling|lang=en}} A defensive [[position]] in which the [[wrestler]] is supported by his feet and head, belly-up, in order to prevent touch-down of the shoulders and eventually to [[dislodge]] an opponent who has established a position on top.
-# {{context|poetry|lang=en}} A point in a [[line]] where a [[break]] in a word unit cannot occur.
+# {{label|en|chemistry}} An [[intramolecular]] [[valence bond]], [[atom]] or [[chain]] of atoms that [[connect]]s two different parts of a [[molecule]]; the atoms so connected being [[bridgehead]]s.
+# {{label|en|electronics}} An unintended [[solder]] [[connection]] between two or more [[component]]s or pins.
+# {{label|en|electronics}} Any of several [[electrical]] [[device]]s that [[measure]] characteristics such as [[impedance]] and [[inductance]] by [[balancing]] different parts of a [[circuit]]
+# {{label|en|billiards|snooker|pool}} A particular form of one hand placed on the table to support the [[cue]] when making a shot in cue sports.
+# {{label|en|billiards|snooker|pool}} A cue modified with a convex arch-shaped notched head attached to the narrow end, used to support a player's (shooter's) cue for extended or tedious shots. Also called a [[spider]].
+# {{label|en|diplomacy}} A statement, such as an [[offer]], that signals a possibility of accord.
+# {{label|en|graph theory}} An [[edge]] which, if [[remove]]d, changes a [[connected graph]] to one that is not connected.
+# {{label|en|wrestling}} A defensive [[position]] in which the [[wrestler]] is supported by his feet and head, belly-up, in order to prevent touch-down of the shoulders and eventually to [[dislodge]] an opponent who has established a position on top.
+# {{label|en|poetry}} A point in a [[line]] where a [[break]] in a word unit cannot occur.
 # Anything supported at the ends and serving to keep some other thing from resting upon the object spanned, as in engraving, watchmaking, etc., or which forms a platform or staging over which something passes or is conveyed.
 # A low wall or vertical partition in the fire chamber of a furnace, for deflecting flame, etc.; a [[bridge wall]].
 # A solid crust of undissolved salt in a [[water softener]].
