t+as:[[ফ্ৰান্স]] t-balance ([[WT:EDIT|Assisted]]) <France#25226629>

--- a/en/f/France.2105.wikitext
+++ b/en/f/France.2105.wikitext
@@ -53,6 +53,7 @@ From {{etyl|fr|en}} {{term|France|lang=fr}}, {{etyl|fro|en}} {{term|France|lang=
 * Aragonese: {{t|an|Franzia|f}}
 * Armenian: {{t+|hy|Ֆրանսիա|tr=Fransia}}
 * Aromanian: {{t|rup|Gallia}}, {{t|rup|Frantsia}}
+* Assamese: {{t|as|ফ্ৰান্স|sc=Beng}}
 * Asturian: {{t+|ast|Francia|f}}
 * Azeri: {{t+|az|Fransa}}
 * Basque: {{t+|eu|Frantzia}}
@@ -109,8 +110,8 @@ From {{etyl|fr|en}} {{term|France|lang=fr}}, {{etyl|fro|en}} {{term|France|lang=
 * Korean: {{t+|ko|프랑스|tr=Peurangseu|sc=Hang}}
 * Kurdish:
 *: Sorani: {{t|ku|فه‌ره‌نسا|sc=ku-Arab}}
-* Lao: {{t+|lo|ປະເທດຝະລັ່ງ|tr=|sc=Laoo}}
 {{trans-mid}}
+* Lao: {{t+|lo|ປະເທດຝະລັ່ງ|tr=|sc=Laoo}}
 * Latin: {{t+|la|Gallia|f}}, {{t+|la|Francia}}
 * Latvian: {{t+|lv|Francija|f}}
 * Limburgish: {{t+|li|Frankriek}}
