--- a/en/c/cling.6835.wikitext
+++ b/en/c/cling.6835.wikitext
@@ -66,7 +66,7 @@ From {{etyl|ang|en}} {{term|clingan||to adhere|lang=ang}}; akin to {{etyl|da|-}}
 {{trans-top|(figuratively) feel strongly about}}
 {{trans-mid}}
 * German: {{t+|de|hängen|alt=hängen an}}
-* Spanish: {{t|es|estar apegado|alt=estar apegado a}}
+* Spanish: {{t|es|estar apegado|alt=estar apegado a}}, {{t+|es|aferrarse}}
 {{trans-bottom}}
 
 ===References===
