--- a/en/c/catch.6830.wikitext
+++ b/en/c/catch.6830.wikitext
@@ -340,7 +340,7 @@ The pronunciation /kɛtʃ/ started out as the unstressed variant of /kætʃ/ but
 
 ====Translations====
 {{trans-top|to capture or snare}}
-* Belarusian: {{t|be|лавіць|impf|tr=lavíc'|sc=Cyrl}}
+* Belarusian: {{t|be|лавіць|impf|tr=lavíc'|sc=Cyrl}}, {{t|be|злавіць|impf|tr=zlavíc'|sc=Cyrl}}
 * {{trreq|ka}}
 * Italian: {{t+|it|agguantare}}
 * Marathi: {{t|mr|पकडणे|tr=pakaḍaṇe|sc=Deva}}
@@ -355,7 +355,7 @@ The pronunciation /kɛtʃ/ started out as the unstressed variant of /kætʃ/ but
 *: Logudorese Sardinian: {{t|src|aggarrare}}
 * Sassarese Sardinian: {{t|sdc|agguantà}}
 * Scottish Gaelic: {{t|gd|glac}}
-* Ukrainian: {{t|ukr|лови́ти|impf|tr=lovýty|sc=Cyrl}}
+* Ukrainian: {{t+|ukr|ловити|impf|tr=lovýty|sc=Cyrl}}
 
 {{trans-bottom}}
 
