/* Verb */ Quote added <feel#25336920>

--- a/en/f/feel.6876.wikitext
+++ b/en/f/feel.6876.wikitext
@@ -12,48 +12,51 @@ From {{etyl|enm|en}} {{term|felen|lang=enm}}, from {{etyl|ang|en}} {{term/t|ang|
 ====Verb====
 {{en-verb|feels|feeling|felt}}
 
-# {{context|transitive|copulative|lang=en}} To become aware of through the [[skin]]; to use the [[sense]] of [[touch]] on.
+# {{label|en|transitive|copulative}} To become aware of through the [[skin]]; to use the [[sense]] of [[touch]] on.
 #: {{usex|You can '''feel''' a heartbeat if you put your fingers on your breast.|lang=en}}
 #: {{usex|I '''felt''' downright hot and miserable evening at night.|lang=en}}
-# {{context|transitive|lang=en}} To experience an emotion or other mental state about.
+# {{label|en|transitive}} To experience an emotion or other mental state about.
 #: {{usex|I can '''feel''' the sadness in his poems.|lang=en}}
-#* Alexander Pope
+#* {{w|Alexander Pope}} (1688-1744)
 #*: Teach me to '''feel''' another's woe.
+#*{{quote-book|year=1910|author={{w|Emerson Hough}}
+|title=[http://www.gutenberg.org/ebooks/11593 The Purchase Price]|chapter=1
+|passage=Captain Edward Carlisle, soldier as he was, martinet as he was, '''felt''' a curious sensation of helplessness seize upon him as he met her steady gaze, her alluring smile ; he could not tell what this prisoner might do.}}
 #* {{quote-magazine|date=2013-08-10|volume=408|issue=8848|magazine={{w|The Economist}}|author=Lexington
 |title=[http://www.economist.com/news/united-states/21583274-new-wave-press-barons-should-not-allow-newspapers-become-niche-products-keeping Keeping the mighty honest]
 |passage=British journalists shun complete respectability, '''feeling''' a duty to be ready to savage the mighty, or rummage through their bins. Elsewhere in Europe, government contracts and subsidies ensure that press barons will only defy the mighty so far.}}
-# {{context|transitive|lang=en}} To [[find]] one's [[way]] ([[literally]] or [[figuratively]]) by touching or using cautious movements.
+# {{label|en|transitive}} To [[find]] one's [[way]] ([[literally]] or [[figuratively]]) by touching or using cautious movements.
 #: {{usex|I '''felt''' my way through the darkened room.|lang=en}}
 #: {{usex|I '''felt''' my way cautiously through the dangerous business maneuver.|lang=en}}
-# {{context|transitive|lang=en}} To be or become [[aware]] of.
-# {{context|transitive|lang=en}} To experience the [[consequence]]s of.
+# {{label|en|transitive}} To be or become [[aware]] of.
+# {{label|en|transitive}} To experience the [[consequence]]s of.
 #: {{usex|'''Feel''' my wrath!|lang=en}}
-# {{context|transitive|lang=en}} To [[think]], [[believe]], or have an [[impression]] concerning.
+# {{label|en|transitive}} To [[think]], [[believe]], or have an [[impression]] concerning.
 #: {{usex|I '''feel''' that we need to try harder.|lang=en}}
 #* {{w|William Shakespeare}} (1564-1616)
-#*: Garlands {{...}} which I '''feel''' / I am not worthy yet to wear.
+#*: Garlands{{...}}which I '''feel''' / I am not worthy yet to wear.
 #* {{quote-book|year=1963|author={{w|Margery Allingham}}|title={{w|The China Governess}}
 |chapter=19|url=http://openlibrary.org/works/OL2004261W
 |passage=When Timothy and Julia hurried up the staircase to the bedroom floor, where a considerable commotion was taking place, Tim took Barry Leach with him. He had him gripped firmly by the arm, since he '''felt''' it was not safe to let him loose, and he had no immediate idea what to do with him.}}
-# {{context|intransitive|lang=en}} To [[receive]] [[information]] by [[touch]] or by any [[neuron]]s other than those responsible for sight, smell, taste, or hearing.
-# {{context|intransitive|lang=en}} To search by sense of touch.
+# {{label|en|intransitive}} To [[receive]] [[information]] by [[touch]] or by any [[neuron]]s other than those responsible for sight, smell, taste, or hearing.
+# {{label|en|intransitive}} To search by sense of touch.
 #: {{usex|He '''felt''' for the light switch in the dark.|lang=en}}
-# {{context|intransitive|copulative|lang=en}} To experience an emotion or other mental state.
+# {{label|en|intransitive|copulative}} To experience an emotion or other mental state.
 #: {{usex|He obviously '''feels''' strongly about it.|lang=en}}
 #: {{usex|She '''felt''' even more upset when she heard the details.|lang=en}}
 #* {{quote-book|year=1898|author={{w|Winston Churchill (novelist)|Winston Churchill}}
 |title={{w|The Celebrity}}|chapter=5
 |passage=Then we relapsed into a discomfited silence, and wished we were anywhere else. But Miss Thorn relieved the situation by laughing aloud, and with such a hearty enjoyment that instead of getting angry and more mortified we began to laugh ourselves, and instantly '''felt''' better.}}
-# {{context|copulative|lang=en}} To [[seem]] (through [[touch]] or otherwise).
+# {{label|en|copulative}} To [[seem]] (through [[touch]] or otherwise).
 #: {{usex|It looks like wood, but it '''feels''' more like plastic.|lang=en}}
 #: {{usex|This is supposed to be a party, but it '''feels''' more like a funeral!|lang=en}}
-# {{context|intransitive|lang=en}} To [[sympathise]]; to have the sensibilities moved or affected.
+# {{label|en|intransitive}} To [[sympathise]]; to have the sensibilities moved or affected.
 #: {{usex|I '''feel''' for you and your plight.|lang=en}}
-#* Burke
+#* {{w|Edmund Burke}} (1729-1797)
 #*: [She] '''feels''' with the dignity of a Roman matron.
 #* {{w|Alexander Pope}} (1688-1744)
 #*: who '''feel''' for all mankind
-# {{context|transitive|US|slang|lang=en}} To [[understand]].
+# {{label|en|transitive|US|slang}} To [[understand]].
 #: {{usex|I don't want you back here, ya '''feel''' me?|lang=en}}
 
 ======Usage notes======
