--- a/en/c/come.6838.wikitext
+++ b/en/c/come.6838.wikitext
@@ -56,7 +56,12 @@ Cognate with {{etyl|sco|-}} {{term|cum||to come|lang=sco}}, {{etyl|stq|-}} {{ter
 #: {{usex|lang=en|You can't '''come''' any tricks here.}}
 # {{context|intransitive|lang=en}} happen
 #: {{usex|lang=en|This kind of accident '''comes''' when you are careless.}}
-
+# {{context|intransitive|with ''from''|lang=en}}
+## to be or have been a resident or native
+##: {{usex|lang=en|Where did you '''come''' from?}}
+## {{also with ''of''|lang=en}} from a specific family 
+##: {{usex|lang=en|He '''comes''' from a good family.}}
+# {{context|intransitive|lang=en}} grain germinates
 ====Usage notes====
 A few old texts use ''[[comen]]'' as the past participle.
 
